--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -9,10 +9,14 @@
 - 2LP
 - 2MK
 
-隙があったらクロスにしたい。
-
 正直、サマソは溜めてもすぐ裏に抜けるので無駄。基本は2HPとMKで落とす。
 サマソを溜めるよりも距離を調整する方が重要。
+
+## 弾
+
+隙があったらクロスにしたい。
+
+弾の撃ち合いは強ブレイドで相手の弾を一発受けてからクロスに派生するのが強い。発生は遅い。
 
 近距離で弾を撃っているとインパクトで返されがち。
 2LP, 2MP, 4HPなどを置くと返しやすい。
@@ -44,6 +48,8 @@ DR 2MKやDR HKから2MPに繋ぐ。
 
 強ブレイドを置いた状態もかなり相手の動きを制限している。
 相手が何もしなかったらソニックを撃ってクロスに派生してもいいし。
+
+パリィしてくる相手には、裏拳をとりあえずガードさせて攻め継続するのもあり。
 
 ## 守り
 
