--- a/games/Street-Fighter/Six/差し合い.md
+++ b/games/Street-Fighter/Six/差し合い.md
@@ -144,3 +144,5 @@
 
 差し合いで前に出るのはラインを上げる以上に、相手の後ろ歩きに中足を差し込むため。
 中足からダメージを取れないキャラはあまり前に歩く意味がない。
+
+相手がラッシュにパリィを一瞬押してくるなら、あえて中下段を遅らせてパリィが切れたところに当てると、相手もちゃんとガードしないといけない。
