--- a/games/Street-Fighter/Six/考えること.md
+++ b/games/Street-Fighter/Six/考えること.md
@@ -24,3 +24,5 @@
 リーサルと似ているが、確定スタンの状況や連携も覚えるといい。
 
 DI空中ヒットのコンボ忘れがち。
+
+リスクリターンだけを考えるとジャンプ攻撃が当たる距離の波動拳は撃たない方がいいけど、手札が一枚減ることによる影響であったり、間合いの長さであったりと他にも考えるべき要素がある。
