--- a/shared/memory/記憶を思い出す.md
+++ b/shared/memory/記憶を思い出す.md
@@ -1,2 +1,4 @@
 記憶を思い出す時にチートシートがあると思い出しやすい。
 元素表を覚える「水兵リーベー・・・」みたいな。
+
+記憶はその記憶を辿る道が多いほど定着しやすいので、覚えることを減らそうとすればするほど覚えにくくなる。思い出したい記憶と関連する余計な記憶が多ければ多いほど思い出しやすい。
