--- a/shared/music/vocal/歌手.md
+++ b/shared/music/vocal/歌手.md
@@ -15,3 +15,5 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 
 すごい歌手というのは、時代を築くような、突出した歌手。卓越した歌手。
 例えば、Mrs. GREEN APPLEだったらやはり強い高音が特徴。何らかの人間離れした特徴を持っている。
+
+喉声の歌手は30-40代で喉ボロボロになって消えるだろうから儚い。
