--- a/shared/voice/training/tips/声を止める.md
+++ b/shared/voice/training/tips/声を止める.md
@@ -8,5 +8,11 @@
 口を開いたまま、声帯の開け閉めだけで声を止められるようにする練習。
 息で切った方が自然だけど、声帯の開け閉めも必要。
 
-- 急に止める（声帯）
-- ゆっくり止める（息）
+- 急に止める
+  - 声帯を閉じる
+  - 口を閉じる
+- ゆっくり止める
+  - 息の圧を下げる
+  - 息の量を減らす
+
+声を切りたいからといって息の圧を下げてしまうと次の反応が遅れる。息の圧はそのまま、口や声帯で声を切る。
