--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -95,3 +95,5 @@ https://youtube.com/watch?v=XWGCrPW6e-M&si=zPTuAuo2jKXU7pQ7
 強い吐息が入るとセクシーな印象になりやすい。肺活量や密着感を感じる。
 
 地声でも声帯の後ろ側が少し開いてハスキー気味になると女性っぽい。
+
+柔らかくて高く軽い声は男には難しい。太く重くなりやすいし、柔らかくするために喉を下げて低くなりがち。
