--- a/shared/voice/training/tips/裏声を出す.md
+++ b/shared/voice/training/tips/裏声を出す.md
@@ -83,3 +83,5 @@ https://youtu.be/zbUnCDf60Mw?si=2RDqUvc5xWrnAmb7
 横隔膜の力を抜きながら息を吐くか、横隔膜は下げたまま腹筋で息を吐くか。
 
 ファルセットはあくまでも表現として取り入れるべきで、まずは地声で全部歌えないといけない。
+
+宇多田ヒカルは雑音が少ない綺麗な裏声。
