--- a/shared/voice/training/声を制御する要素.md
+++ b/shared/voice/training/声を制御する要素.md
@@ -1,8 +1,29 @@
-声を出すときにコントロールしないといけない要素は何か。
+## 制御される要素
 
-1. 声量、声と息のバランス
-2. 声色（裏声、鼻声など）
-3. 音程
-4. 声の響き、硬さ
-5. 声の揺れ（ビブラート）
-6. 雑音（エッジボイス、シャウト、など）
+- 声量、声と息のバランス
+- 声色（裏声、鼻声など）
+- 音程
+- 声の響き、硬さ
+- 声の揺れ（ビブラート）
+- 雑音（エッジボイス、シャウト、など）
+
+## 声を制御する要素
+
+- 息の圧・強さ（プレッシャー）
+- 息の量・太さ
+- 声帯の位置
+- 声帯の張り（テンション）
+- 声帯の硬さ
+- 声帯の長さ
+- 仮声帯の鳴り
+- 軟口蓋の位置（開閉、高さ）
+- 口の形
+- 舌の形や位置
+- 喉の広さ
+
+逆に、制御できない要素
+
+- 肺や胸郭の大きさ
+- 鼻や顎などの骨格
+
+声を出すときにコントロールしないといけない要素は何か。
