--- a/games/Street-Fighter/Six/characters/Blanka/攻め.md
+++ b/games/Street-Fighter/Six/characters/Blanka/攻め.md
@@ -5,6 +5,8 @@
 ブランカはミリ残しを削り切るのが難しい。結局、体一つで突撃しないといけないので、リスクが高い。
 リーサルは逃したくないので、コンボの研究と練習は他のキャラよりも優先度が高い。
 
+ODロリからは弱バチカからサプフォの攻めが強い。
+
 ## LK, 2LP: 1-6
 
 - LK, 2LP, サンダー: ガードされても投げの外で-3、暴れを潰せる
