--- a/shared/music/theory/rhythm/リズム.md
+++ b/shared/music/theory/rhythm/リズム.md
@@ -65,4 +65,5 @@ https://youtube.com/watch?v=SsyijRvm7Qo&si=KBYmrf4gJKDeNvXK
 
 まずリズムがある。発音とか言葉とかの前にリズムによるフレーズがある。
 
-[よく使うリズムパターン8選 with 王道進行 - YouTube](https://youtube.com/watch?v=51xZz2uoGAw&si=A3i-_dhO9auzPmsK)
+- [よく使うリズムパターン8選 with 王道進行 - YouTube](https://youtube.com/watch?v=51xZz2uoGAw&si=A3i-_dhO9auzPmsK)
+- [【５分で確認】ドラム基本リズムパターン１０種類（譜面付） - YouTube](https://youtube.com/watch?v=Y-ebU6aNm1Y&si=ZX3nJkvMe8-JftvK)
