--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -240,3 +240,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 勢いをつけずに力を出すには基礎が必要。支えによって力を出す。
 
 声を出す時は体を広げる意識。特に首を外に引っ張って、気道を広げるイメージ。
+
+サンボマスターは横隔膜を上げて、腹筋で息をたくさん使って、息も荒く、仮声帯をガラガラ鳴らす。
