--- a/shared/music/vocal/training/tips/歌詞カードを作る.md
+++ b/shared/music/vocal/training/tips/歌詞カードを作る.md
@@ -15,6 +15,10 @@
 テクニックというよりは、表現をどうするかを書くのがいいかも。
 
 1. 歌詞を写す
-2. リズム（アクセント）を記載する
-3. しゃくりやフォールなど特徴的なメロディを記載する
+2. （フェイクを記載する）
+3. リズム（アクセント）を記載する
 4. スタッカートにして短く区切る位置を記載する
+5. ブレスの位置を記載する
+6. しゃくりやフォールなど特徴的なメロディを記載する
+
+まずはリズムが重要。
