--- a/games/Street-Fighter/Six/tips/モダンかクラシックか.md
+++ b/games/Street-Fighter/Six/tips/モダンかクラシックか.md
@@ -1,2 +1,4 @@
 クラシックは別にモダンの上位互換ではない。
-ただ、キャラによっては明らかにモダンが弱いキャラもいる。豪鬼とか。
+ただ、キャラによっては明らかにモダンが弱いキャラもいる。豪鬼とかガイルとか。特に中段がないとか発生の早い技がないとか立ち回りで困るキャラは厳しい。
+
+ルーク、ラシード、ベガ、リリー、本田、ジュリ、キンバリー、あたりはモダンでも全然困らない。技が欠けていてもあまり影響しない。
