--- a/shared/communication/frameworks/assertion/根拠.md
+++ b/shared/communication/frameworks/assertion/根拠.md
@@ -117,3 +117,5 @@ explanation も参照。
 意見の根拠として、どこでそう思ったかを分解してみる。
 「料理が美味しかった」であれば、味、食感、香り、など。
 「映画が面白かった」であれば、特定のシーン、ストーリー、キャラクター、など。
+
+証拠や根拠は誰かを納得させるためのもので、別に相手が納得しなくてもいいなら必要ない。権力や暴力でねじ伏せるとか、すでに相手が誰からも大事にされてないとか。
