--- a/shared/music/vocal/training/tips/音程を合わせる.md
+++ b/shared/music/vocal/training/tips/音程を合わせる.md
@@ -8,3 +8,6 @@
 まず声帯の伸縮で自然に特定のピッチの声が出せないと、音程を合わせる以前の問題。不自然な出し方で音程を合わせるのは誰にでもできる。
 
 単調にメロディを辿れなかったら高いところだけ息を強くしたり低いところだけ喉を下げたりして無理やり発声している。
+
+原曲を聴いて音程が怪しいときはガイドメロディを探して聴いてみるといい。
+楽譜が読めるとなおいい。
