--- a/shared/music/vocal/ハモリ.md
+++ b/shared/music/vocal/ハモリ.md
@@ -56,3 +56,7 @@ https://youtu.be/8SrbHcLcMzw?si=K2LsssElsbk9xrHK
 あなたの夜が明けるまでのハモリは基本的に+5の2オク下。
 
 ハモる時は、他のパートに引っ張られないように自分のパートに集中するよりも、ハモった状態に集中する。うまくいってなかったらハモリの音で気づくべき。それにハモってる状態がわからないとハモっても楽しくないし。
+
+ハモリはコードに合わせるのが大事。声だけじゃなくて伴奏ともハモる。
+
+声質が近い方がハモリは綺麗。
