--- a/shared/sleep/寝る前の習慣.md
+++ b/shared/sleep/寝る前の習慣.md
@@ -30,3 +30,6 @@
 
 就寝の3時間前からは固形物を摂らないほうがいい。
 どうしても腹が減ったら甘い飲み物や緩いゼリーなどで誤魔化してもいいけど、飲み物も1-2時間前から避けたほうがいい。腹が減る前に寝るのが吉。
+
+寝る前に食後2時間は空けた方がいい。
+食べてすぐ寝ると逆流性食道炎になりやすい。
