--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -23,3 +23,12 @@
 
 口の開け方を変えるだけでも音域が伸びることがある。
 顎を斜め後ろに引くように開けるよりも、斜め前に出すように開けた方が喉が締まりにくいし、声帯も伸びやすい。ただ、声が軽くなりやすい。
+
+まず、声が裏返るところまで滑らかに上げる練習。
+裏返ったところで、同じ音を繰り返して裏返らないように練習する。
+この二段構えで鍛えていく。
+
+そもそも低音のロングトーンで喉の力を抜いて声を出して裏返るなら、音程を変えても裏返る。まずは低音のロングトーンで横隔膜を下げて息の圧で地声を維持できるようにする。
+低音で声帯を維持できてないならそもそも声帯を維持する力が弱すぎる。
+
+高音を練習する場合、喉を下げるためにも一旦低音を経由すると出しやすくなりがち。
