--- a/shared/voice/声と息.md
+++ b/shared/voice/声と息.md
@@ -36,3 +36,5 @@
 息の圧が弱い時は息が漏れないとおかしい。
 
 息の圧が弱いのに息が漏れないのは、声帯に力を入れて無理やりくっつけている。
+
+強く声を出すFAKE TYPEみたいな曲は息を強く吐くというよりは、あらかじめ息の圧を高めておいて、必要なところで解放するだけ。息の量は一定。
