--- a/games/Street-Fighter/飛び道具の考え方.md
+++ b/games/Street-Fighter/飛び道具の考え方.md
@@ -114,3 +114,8 @@ https://youtube.com/watch?v=r4pAE0sdk8s&si=Yex61e6pyGxq_Vxf
 飛び道具の強さは、端にいても攻められることだ。
 ジャンプ攻撃が届かない距離でジャンプされても単にガードされているのと変わらない。
 ただ、弾では基本的に崩せないので、体力リードされているとラッシュなどで近づいて崩さないといけない。
+
+弾を見てからジャンプが間に合うなら、リスクが跳ね上がってしまう。
+
+弾は、見てから飛べない距離か、ジャンプ攻撃が届かない距離で撃つのが基本。
+キャンセルできる攻撃をガードさせて撃つのも見てから飛べない。
