--- a/shared/collaboration/仕事を任せる.md
+++ b/shared/collaboration/仕事を任せる.md
@@ -104,3 +104,6 @@ https://x.com/ysk_motoyama/status/1814496851703615906
 部下を信頼して仕事を任せても、目を離してはいけない。よく見ておいて、部下の工夫に気づいて、よくやっている、と声をかける。
 
 自分にできることほど部下に任せるべき。逆に自分はできないことに手を広げる。
+
+自分にできないことを他人に任せる。
+自分にできることも他人に任せる。
