--- a/shared/job/仕事ができるということ.md
+++ b/shared/job/仕事ができるということ.md
@@ -19,3 +19,6 @@
 - 余計な作業をしない
 
 目の前の作業ができるだけでは仕事ができるとはいえない。
+
+仕事ができるというのは、資格を持っていたり作業が早かったりすることではなくて、期待した成果、あるいはそれ以上のものを出せること。期待していない方に勝手に進んでいくのは無能な働き者だ。無能なら怠け者の方がいい。
+もし味方に無能な働き者がいたら、前線に放り込んで使い潰すか、首を切るしかない。それ以外は害がある。
