--- a/shared/study/勉強不要説.md
+++ b/shared/study/勉強不要説.md
@@ -11,3 +11,5 @@
 実際のところ勉強する内容というのは重要ではない。勉強したことを使おうと思ったら何にでも使える。お金になるかどうかは需要にもよるけど、とりあえず全部勉強しておいて、後で使い道を考えるのが学校の勉強。「選べる」ようになるのが大事。
 
 勉強する行為自体も重要。何かを学ぶ姿勢を学んでいる。その中で、学べない人もいるし、教えられない教師もいるのは問題。
+
+「勉強できて得することはあまりないかもですけど、できなくて困る事はいずれ沢山出てきますから...」（『秘密法人デスメイカー』）
