--- a/shared/music/vocal/歌.md
+++ b/shared/music/vocal/歌.md
@@ -152,3 +152,6 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 野球で言うと、まずは160km/hのストレートを目指すべきなのに、変化球で小賢しく戦うみたいなもの。
 
 声を使った詩にメロディを載せたもの。
+
+歌が下手だと、音楽というよりは雑音になる。
+不快に感じる人もいるだろうけど、個人的にはホワイトノイズみたいな感じ。単に印象に残らない。
