--- a/shared/development/卓越性.md
+++ b/shared/development/卓越性.md
@@ -1,5 +1,9 @@
 # 卓越性
 
+どれだけ人間離れしているか。
+
+凡庸でないこと。
+
 10 人に 1 人くらいのレベルならやってない人が多いから簡単に入れる。
 
 卓越すること、人間離れしたもの。
@@ -13,3 +17,14 @@
 「プロの世界ではな...逆に言うと３つも要らねーんだよ...たった一つ...人間離れしたモノを持ってりゃいい。キミにはそれがあるか...？」（『ドラフトキング』）
 
 いろんな趣味に手を出して、どれもこれもできるという面では卓越できない。とにかく一つに絞って、一点突破するべき。
+
+個人の枠の中で留まらず、専門外でも知らないことを知ろうとすること。
+知っていることでも満足せず、さらに深く知ろうとすること。
+
+パフォーマンスに魂を込めるということは、常にこれまでの一番のパフォーマンスをすること。そこには再現性がない。再現性がないからこそ奇跡のように見える。誰にでも再現できる理論だけではダメで、理論を超えた上で偶然も味方につけないといけない。
+
+卓越すること、エクセレントであること。
+
+「今すぐできないことが我慢できない」のが卓越するための資質。
+
+こだわりは少ない方が楽だけど、大事なところはこだわらないと卓越できない。楽な人生と、アートとしての人生。
