--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
@@ -30,6 +30,14 @@ C限定。
 - 2LP, cDR 2LP, MP-4HP, 強SA1, ODサマー: 2362
 - 2LP, cDR 2LP, MP, 2MP, 強サマー, SA3: 3368
 
+## 2LP(+4)
+
+- 2LP(+4), 2MP-2MP, 強サマソ: 1780
+- 2LP(+4), MP-4HP, 強サマソ: 2100
+- {C} 2LP(+4), HP, cDR HK, 2MP, 強サマソ: 2446
+- 2LP(+4), MP-4HP, 強SA1, ODサマソ: 2990
+- {C} 2LP(+4), HP, cDR HK, 2MP, 強サマソ, SA3: 4446
+
 ## 2LK
 
 - 2LK, 2LP, LK, 強サマー: 1490(AC1)
@@ -77,6 +85,11 @@ HK, SA1はクラシックのみ。
 - {端} 6HK(pc), 2HK-3HK, 強サマー: 2830
 - {C端} 6HK(pc), HP, cDR HK, 強サマー: 3470
 
+## DR MP
+
+- DR MP, MP-4HP, 強サマー: 2780
+- DR MP, MP-4HP, 強SA1, 0Dサマー: 3720
+
 ## DR HP
 
 - DR HP, MP-4HP, 強サマー: 2520
@@ -92,8 +105,9 @@ HK, SA1はクラシックのみ。
 
 ## DR 2MK
 
-- DR 2MK, 2MP-2MP, 強サマー: 1820
+- DR 2MK, 2MP, 強サマー: 1960
 - DR 2MK, MP-4HP, 強サマー: 2240
+- {C} DR 2MK, HP, cDR HK, 2MP, 強サマー: 2586
 
 ## DR 4LK
 
