--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -12,7 +12,17 @@
 正直、サマソは溜めてもすぐ裏に抜けるので無駄。基本は2HPとMKで落とす。
 サマソを溜めるよりも距離を調整する方が重要。
 
-## 弾
+## 飛び道具
+
+- 緩急をつける
+- たまにラッシュを混ぜる
+- 近距離であえて弾を撃つ
+- ジャンプ攻撃が届かない距離では、前に出るよりも弾を撃つ
+- 見てからジャンプできる距離では弾を撃たない
+- 余裕があったらソニックよりもクロスにする
+- 遠距離で遅い弾を撃ったら前に出る
+- ブレイドで止めてジャンプを誘うならサマソを溜める
+- 立ちを見てジャンプする相手には、あえて立って通常技で対空する
 
 隙があったらクロスにしたい。
 
@@ -30,6 +40,12 @@
 
 最遠距離で弱クロスを撃つと遠すぎて簡単に前ジャンプされて近づかれる。
 歩きなり膝なりで相手の前ジャンプに下溜めが間に合う程度まで前に出るか、撃つなら中強クロスにしたい。
+
+遅い弾を撃ったら前に出る、ブレイドで止めてクロスを撃たないならサマソを溜める、みたいに弾とその後の動きを基本的には一貫させたい。まぁ、ワンパターンだとそれはそれで狩られるけど。一貫性があれば、それを利用して相手を誘うこともできる。
+
+ブレイドで止めたのにジャンプや空中の突進技にサマソを出せないなら、ブレイドで止めた意味がない。
+
+ブレイドで止めて相手のジャンプやファランクスを誘ったときサマソ出てないのもったいない。
 
 ## 攻め
 
