--- a/games/Street-Fighter/Six/characters/キャラの比較.md
+++ b/games/Street-Fighter/Six/characters/キャラの比較.md
@@ -1,3 +1,8 @@
+## 差し合いの特徴
+
+基本的に下段からキャンセルなどで攻められないキャラは下がるキャラだと思っていい。
+相手が前歩きしないと差し合いから攻められないキャラとも言える。
+
 ## 足の速さ
 
 https://x.com/apI4fRGlmFAaJ5T/status/1670550360933695488
