--- a/shared/business/corporation/tips/リモートワークの難しさ.md
+++ b/shared/business/corporation/tips/リモートワークの難しさ.md
@@ -12,3 +12,5 @@
 リモートでエンゲージメントが下がりやすいのは間違いない。
 でもそれは社員というよりもマネジメントの問題。そのまま社員に負担を押し付けても改善しない。リモートをやめても結局エンゲージメントが下がる。
 ただ、長期的に見れば、今後リモートでなくても入ってくれる社員を集めるために、どこかで戻すという経営判断はありうる。
+
+人と直接会わないと、相手を雑に扱いがちになるっていうのはあるかも。
