--- a/shared/engagement/誇り.md
+++ b/shared/engagement/誇り.md
@@ -84,3 +84,8 @@
 
 エンゲージメントの核はプライド、誇りだと思ってる。
 うまくプライドを形成することが重要。所属している意識であり、責任感であり、意欲である。
+
+プライドが執着になってはいけない。
+プライドのために執着を捨てられないといけない。
+
+正しい誇りを持つべきだ。
