--- a/shared/music/vocal/歌.md
+++ b/shared/music/vocal/歌.md
@@ -155,3 +155,6 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 
 歌が下手だと、音楽というよりは雑音になる。
 不快に感じる人もいるだろうけど、個人的にはホワイトノイズみたいな感じ。単に印象に残らない。
+
+カラオケが広まったことで、ミセスみたいに高い声を出す技術だけで凡人でも歌える曲が流行るようになったのかも。
+昭和歌謡とか声が良すぎて凡人が歌ってもあまり決まらないし。
