--- a/shared/breath/training/tips/息を強くする.md
+++ b/shared/breath/training/tips/息を強くする.md
@@ -239,3 +239,6 @@ sの発音で息の強さと細さはよくわかる。
 https://youtu.be/wADwhMypI1g?si=tCLbJvOx2dK33cYP
 
 腹筋は息を押し出すというよりも圧縮するように使う。
+
+引きつったような「ひっ」を何度も繰り返すのも息の圧を維持する練習になる。強くて高い音が鳴る方がうまくできている。
+https://youtube.com/shorts/nwktMJI_rU8?si=XAGRbGhLYMHG6sJU
