--- a/shared/business/客.md
+++ b/shared/business/客.md
@@ -9,3 +9,9 @@
 
 お互いに利用しあったり、一方的に利用して報酬を支払う関係ならいい。
 しかし、一方的に利用されたり、利用したのに報酬を支払わなかったりするのは良くない。
+
+同じお金を支払っている客の中にも格付けがある。
+まず店員に感謝して利用する客、次に黙って利用する客、最後に文句を言う客。
+文句を言う客は切ってもいいように経営しないといけない。
+
+全ての客を大事にする必要はない。
