--- a/shared/execution/planning/計画.md
+++ b/shared/execution/planning/計画.md
@@ -103,3 +103,6 @@ plan, project, program はどれも計画。
 
 朝にいちいちタスク選ぶのは良くない。無駄に気力を使う。
 タスクはコンテキストで分けて、そのコンテキストにいるときはとにかく上からタスクを消化できるようにしたい。
+
+- スケジュールをどれくらい埋めるか
+- どのくらいお金を使うか
