--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -1,9 +1,10 @@
 ## 概要
 
-喉を広げる、喉を開く、というと二つの意味がある。
-
+- 顎を少し上げる（気道をまっすぐにする）
 - 喉を下げる（甲状軟骨を前に倒す）
+- 首の筋肉で外に引っ張る
 - 喉頭蓋を開く
+- 仮声帯を開く
 
 喉を下げる方法は「喉を下げる」を参照。
 
@@ -38,7 +39,7 @@ https://youtu.be/RitmmhsjDd4?si=YHVYirhlAWKzDYcE
 舌を下げると喉が狭くなってこもった声になるので、舌は下げずに喉だけ下げないといけない。
 こうならないように首の筋肉で喉を下げようとすると最初は鎖骨の辺りや背中が攣りそうになるけど鍛えるしかない。
 
-## メモ
+## その他
 
 歌ったり喋ったりすると喉仏が上がってしまうのは声帯以外の場所を使って音程を変えてしまっている。
 あとは調音のために喉や舌を使いすぎなので、もっと口で調音するのも重要。
