--- a/shared/voice/training/tips/声を安定させる.md
+++ b/shared/voice/training/tips/声を安定させる.md
@@ -71,3 +71,6 @@ https://youtu.be/dpm_YauvTDs?si=I8dM0qUOKjpOts8d
 喉で息をコントロールするのが難しくなるので、シンプルに腹で息をコントロールするしかない。
 
 原曲に声質を合わせてしまう場合、単に音程だけを取り出して自分の声質で歌いたいところ。オフボーカルでガイドメロディを聴くのもいいかも。
+
+自信を持って歌わないと声量が不安定になりやすい。
+歌詞やメロディを多少間違えても、自信を持って安定した声量で歌う。
