--- a/shared/voice/声色.md
+++ b/shared/voice/声色.md
@@ -76,3 +76,5 @@ https://www.venusinfurbroadway.com/narrater/column/pos698/
 首の筋肉を鍛えすぎるとプロレスラーみたいな掠れ声になる。
 
 自分の色で歌うと合わない曲がある人と、わりと何にでも合う人がいる。
+
+強い言葉をあえて可愛い声で歌うのは可愛い声でしかできない。才能。
