--- a/games/Street-Fighter/Six/characters/Blanka/ブランカの対策.md
+++ b/games/Street-Fighter/Six/characters/Blanka/ブランカの対策.md
@@ -6,6 +6,10 @@
 弱、中をガードしたら-23で確反がある。
 中途半端な距離なので通常のコンボとは別に練習しないといけない。
 
+## スライディング
+
+ブランカのスライディングは弾無敵でなく姿勢で抜けているだけなので、速い弾を抜けにくい。
+
 ## その他
 
 バックジャンプからローリングする技は、バックジャンプに前歩きする癖があると当たりがち。
