--- a/shared/execution/planning/project/management/frameworks/正しいウォーターフォール.md
+++ b/shared/execution/planning/project/management/frameworks/正しいウォーターフォール.md
@@ -3,3 +3,5 @@
 
 「ウォーターフォール」を名乗るなら、工程の後戻りがあった時点でそのプロジェクトが失敗したものとして中止しなければならない。
 欠陥品を見つけて、ラインから除外するのと同じ。
+
+実装に入った時点から仕様や設計の変更が全くないのでなければ、ウォーターフォールとは言えない。
