--- a/games/Street-Fighter/Six/characters/Marisa/コンボパーツ.md
+++ b/games/Street-Fighter/Six/characters/Marisa/コンボパーツ.md
@@ -56,6 +56,7 @@
 - 強/ODディマカイルス-派生, DR 4HP, cDR 4HP-h
 - 強/ODディマカイルス-派生, DR 4HP, グラディウス/ファランクス
 - 強/ODディマカイルス-派生, グラディウス
+- ODディマ, HP-h, SA2
 - (端) 強/ODディマカイルス-派生, 2HP-h
 - (端) 強/ODディマカイルス-派生, 4HP-h
 - (端) ODファランクス(壁), 2HP-h
