--- a/games/Street-Fighter/Six/characters/Marisa/練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Marisa/練習メニュー.md
@@ -1,3 +1,17 @@
+## 中TCのヒット確認
+
+（ダミー設定 > ガード: ランダム）
+
+- MP-MP, ODディマ-6P, HP-h, ステップ, HK-h, MP-MP, ...
+- MP-MP, 中ディマ-6P, ステップ, MP-MP, ...
+- MP-MP(g), 弱グラ-h
+- MP-MP(g), ODグラ
+
+## 小パン暴れからの切り返し
+
+- 2LP, 2LP, 弱ディマ-6P, DR HP-h
+- 2LP, 2LP, 弱ディマ, SA3
+
 ## 大コンボの練習
 
 （簡単練習設定: コンボ練習）
