--- a/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
@@ -9,6 +9,8 @@
 
 モダンならAC1でも可。
 
+慣れたらダウンリバーサルに「何もしない」も加えてランダムガードさせる。
+
 ## 柔道
 
 （反撃設定 > ダウンリバーサル: 4F技）
@@ -18,16 +20,14 @@
 
 （反撃設定 > ダウンリバーサル: 通常投げ）
 
-- {端} 前投げ, ステップ, 後歩き, 2MP(pc), HP, 強忍蜂, ...: シミー
-
-## ラッシュからの攻め
-
-- DR 2MP, 2MP, 強忍蜂, SA3
+- {端} 前投げ, ステップ, 後歩き, 2MP(pc), HP, 強炎舞, 強忍蜂, ...: シミー
 
 ## ラッシュからの攻め
 
 - DR 4HK, 2MP, 強炎舞, 強忍蜂, SA3, DR 4HK, ...
 - DR 4HK, 2MP, 強炎舞, 強忍蜂, DR 6MP, 2MP, 強忍蜂, ...
+- DR 4HK(g), 2LP, 2LP, ...
+- DR 4HK(g), 前投げ
 
 ## 差し合いの中のPCコンボ
 
