--- a/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
@@ -16,39 +16,51 @@
 
 一応、HK(pc), HKが42だけど、ダメージが大幅に下がる。
 
-## 4HK-HKから: 48
+## 2HK(pc): 48
+
+- 前跳び: +5
+
+## 4HK-HK: 48
 
 - (中) 中扇: ジャンプに引っかかる
 - (中) 中扇, DR 2MP: その場受け身に連続ガード
 
-## 前投げから: 21
+## DR 4HK(g): 3
+
+めり込んだら、後歩きがシミーになる投げ間合い。
+初期位置くらいの距離は長めに走らないとめり込まない。
+
+## 前投げ: 21
+
+- {端} ステップ: 後歩きがシミーになる投げ間合い
 
 - 弱扇, (強飛翔): その場受け身からジャンプを落とせる、後ろ受け身から前ジャンプに引っかかる
 - DR HK: 打撃重ね、4F技と相打ちでSA2が入る
 - (端) ステップ, 前投げ: 柔道
 - (端) DR 4HK: +6
 
-## 後投げから: 17
+## 後投げ: 17
 
 - 後投げ, 強扇, (OD飛翔): その場受け身からジャンプに引っかかる、後ろ受け身からジャンプを落とせる
 - 後投げ, DR HP: 打撃重ね
 
-## 強忍蜂から: 27
+## 強忍蜂: 27
 
 中央で強忍蜂締めはステップして歩き投げがギリギリ後退に届かない。
 守る側は舞がラッシュしなければ後退としゃがみガードの二択で守れて無敵技もあるので、攻められているとはいえ守る側が有利な読み合い。
 
-## OD炎舞, 強忍蜂から: 37
+## OD炎舞, 強忍蜂: 37
 
 中央でもステップ2回で密着1F。
 
-## 中炎舞から: 35
+## 中炎舞: 35
 
 - ステップ, 前歩き; 前投げ: 目押しで投げ重ね
 
-## 弱飛翔から: 29
+## 弱飛翔: 29
 
 - DR 6MP, 2MP
+- DR 2LK, 2LP, 2LP
 - DR 2LK, 2MP: 目押しで下段重ね
 - (端) ステップ, 4HK, 2MP: ガードで+3、ヒットで+7から2MPが繋がる
 - (端) ステップ, 4HK, 2MP(c), 2MP: カウンターヒットを確認してコンボ
@@ -56,7 +68,7 @@
 - (端) ステップ; 前投げ: 目押しで投げ重ね
 - (端) ステップ, 後歩き: シミー
 
-## 強飛翔から: 31-32
+## 強飛翔: 31-32
 
 - DR 6MP
 - DR 2LK: 目押しで下段
