--- a/games/Street-Fighter/Six/characters/Mai/舞の立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の立ち回り.md
@@ -1,42 +1,57 @@
+## 差し合い
+
+前に出ることもできるけど、基本的にはHPやHKを振りながら下がりたい。
+
+運び性能も高いので下がれる。
+
+弾の撃ち合いは扇が弾に潰されるので不利。
+遠距離ではOD扇を使うか、扇を見てから撃ち返せないくらいの距離を保つ。
+
 差し合いは2MK/HP/HK/扇あたり。
 
 弱扇、扇H、OD扇を追いかけて前歩きしたりラッシュしたりするのが強い。
+弱扇は溜めなくても遅くて数歩くらい追いかけられるし、ラッシュで追い抜ける。
 
 下がりながら、遠目からHPをガードさせて弱扇で固めたり、差し返しにHKを狙ったりするのが基本。
 垂直ジャンプや差し返し、インパクトには弱いので注意。
 
-相手のジャンプ攻撃が届かない間合いでは溜め扇から攻め込みたい。
-
-対空は安定してるけど横に短いし、カス当たりすると安い。ちゃんと当たっても安い方。
-
-弱扇は溜めなくても遅くて数歩くらい追いかけられるし、ラッシュで追い抜ける。
-
-扇が強くて強攻撃が長いので、遠距離や下がる動きが強い。
+相手のジャンプ攻撃が届かない間合いでは溜め扇やOD扇から攻め込みたい。
 
 HPやHKはかなり判定が前に出るので、空振りは危険。
 逆に、舞を相手にするなら、下がりながらHPやHKを振ったところに差し返しが有効。
 
-SA1で炎を纏えるなら積極的にまとった方がいい。
-
-OD扇で相手の波動拳を相殺するのが強い。
-
-投げが届かない距離で微有利を取ったところがあまり強くない。
-扇を溜めるか溜めないかの読み合いくらい。溜めないと確反もある。
-
-溜め花蝶扇は初段をガードしたあと舞側に余裕があるので、相手の動きを見やすい。様子見で近づいておいて、強い攻めを狙いやすい。ただ遅い弾よりも強いところ。
-
-ゲージが余ってたら積極的にラッシュやOD扇を狙う。
-
-HP, 弱扇ならHPをガードしてからのインパクトも返せるし、連続ガードにならないくらい離れるとガードさせて有利。
-ただ、入れ込んでHPにインパクトを合わされると確定する。
+扇が強くて強攻撃が長いので、遠距離や下がる動きが強い。
 
 強化後は弱扇ラッシュが強い。
 
 強化後は弱炎舞をガードされても-2なので出し切ってもいい。
 
+ゲージが余ってたら積極的にラッシュやOD扇を狙う。
+
+溜め花蝶扇は初段をガードしたあと舞側に余裕があるので、相手の動きを見やすい。様子見で近づいておいて、強い攻めを狙いやすい。ただ遅い弾よりも強いところ。
+
+OD扇で相手の波動拳を相殺するのが強い。
+
 OD扇がとにかく強いので積極的に使いたい。発生12Fで、HKの外くらいで当てるとコンボにもいける。インパクトには注意。
 
-運び性能も高いので下がれる。
+## 対空
+
+基本的に昇竜。
+通常技なら4HKの判定が強い。
+
+対空は安定してるけど横に短いし、カス当たりすると安い。ちゃんと当たっても安い方。
+
+## 攻め
+
+## 守り
+
+## その他
+
+投げが届かない距離で微有利を取ったところがあまり強くない。
+扇を溜めるか溜めないかの読み合いくらい。溜めないと確反もある。
+
+HP, 弱扇ならHPをガードしてからのインパクトも返せるし、連続ガードにならないくらい離れるとガードさせて有利。
+ただ、入れ込んでHPにインパクトを合わされると確定する。
 
 DR 4HKが強くて、発生8Fだし、ガードされても2LP, 2LPや投げにもいけるし、ヒットしたら立たせて2MPが繋がる。
 初期位置くらいの距離だと投げは届かない。
