--- a/shared/voice/training/声を制御する要素.md
+++ b/shared/voice/training/声を制御する要素.md
@@ -27,3 +27,6 @@
 - 鼻や顎などの骨格
 
 声を出すときにコントロールしないといけない要素は何か。
+
+声の重さは、声帯の張りで決まる。張りが強いほど重い声。
+ただ、張りを強くするには体を鍛えないといけない。自分の扱えるテンションを超えると裏返ったり不安定になったりする。
