--- a/games/Street-Fighter/Six/characters/Guile/ガイルの対策.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの対策.md
@@ -1,3 +1,14 @@
+## 差し合い
+
+まずは弾をガードしながら前に歩いて、遅い弾を見てからジャンプ攻撃できる中距離まで詰めるのが一番重要。
+ただ、そこから安易に跳んでしまうとサマソで落とされる。立ったのを見てから跳ぶか、ブレイドに大足で差し返す。
+
+ガイルはラッシュ投げが多いので、パリィは控えめにする。
+
+ガイルにインパクトはだいたい間に合わないのでリスクが高すぎる。ジャンプした方がマシ。
+
+## その他
+
 ガイルは当てに行くのが強いキャラ。
 基本的に差し返しは難しいが、間合いギリギリで誘って差し返すことはある。
 まずは置きで当てを潰したいが、当ての中にはソニックブームもあるので難しい。かなり近距離でリスクのある置きをしないといけなくなる。
@@ -18,8 +29,6 @@
 
 ガイルは前投げパニカンから裏拳が重なってガードで3になる。
 通常はしゃがみに当たらないけど、起き上がりなら当たる種類の連携。F式と同じ。ただし、しゃがみ攻撃で返せる。ここは読み合い。
-
-ガイルにインパクトはだいたい間に合わないのでリスクが高すぎる。ジャンプした方がマシ。
 
 ジャンプできる距離を維持して歩いたらジャンプするのが基本。
 
