--- a/games/Street-Fighter/Six/characters/Rashid/ラシードの対策.md
+++ b/games/Street-Fighter/Six/characters/Rashid/ラシードの対策.md
@@ -25,11 +25,11 @@ MP-HKまでガードした時点で-12なので無敵技確定。
 
 ラシード相手はストロークにしっかりリスクを与えるのが大事。強攻撃の空中ヒットからキャンセルで拾える技があるといい。
 
-## SA2
+## SA2（イウサール）
 
 設置型のSAで、ラシードの立ち回りが強化される。
 
-遠めで出してきたらとりあえず端までバクステで逃げるのが基本。
+遠めで出してきたらとりあえず端まで後ろ歩きやバクステで逃げるのが基本。
 ラシードは竜巻の後ろに陣取るのが基本。
 
 あとは単純に差し合いしてから、竜巻が近づいたらパリィでいい。少なくとも投げのダメージだけに抑えられる。
@@ -42,6 +42,9 @@ SA2は後ろに下がって投げだけ見る。
 竜巻に当たっている途中でも相手に押されて変に硬直が切れるパターンがあるので、竜巻から離されたら暴れる。なんなら端で受けるのが安全。
 
 パリィを出さずにSA2を受けると中下段をガードで凌がないといけなくなる。
+
+ラシードのイウサールは諦めて投げを喰らうべきで、下段中段だけは食らってはいけない。とにかくしゃがみガードして、中段だけ見て立つ。発生22F。
+イウサールに当たったあとはパリィで割り込めないので、自力で立つしかない。
 
 ## その他
 
