--- a/games/Street-Fighter/Six/練習の優先順位.md
+++ b/games/Street-Fighter/Six/練習の優先順位.md
@@ -1,5 +1,9 @@
 ## 初級者
 
+1. ループするコンボとセットプレイの練習
+2. 対空の練習
+3. 確反の練習
+
 確反の練習は最優先。確反が安いとナメられる。相手は無敵技使い放題になる。
 
 次に対空。対空できないとナメられる。相手は飛び放題になる。
@@ -7,8 +11,6 @@
 弾への対処。避けたりガードしたりしてジャンプ攻撃が届く中距離まで近づいて、まだ弾を打ってくるならジャンプ攻撃を狙う。
 逆に、中距離で弾を撃たない相手にはそのまま技を当てに行ったり、待ったりしてプレッシャーをかける。
 ジャンプ攻撃からのコンボも練習する。
-
-まずはヒット確認しなくていい攻撃から覚える。
 
 人間の反射神経は0.5秒あれば反応が遅い人でもがんばるだけで見てからなんとかなる。30F。格闘ゲームであれば、ジャンプ、無敵技の確反、が代表的。
 だから、これだけは最初にできるようにする。逆に、反応される行動はリスクが大きい場面や体力が少ない場面では控えめにする。
@@ -18,6 +20,10 @@
 コンボやセットプレイの精度を上げるためのトレモであったり、キャラ対策のための座学やトレモであったり、特に時間がかかる部分は後回しにした方が楽しみやすい。
 
 格ゲーの序盤はとにかく攻めで相手に何もさせずに削るのが大事。キャラ対策には時間がかかる。だから、攻めの起点になる確反、対空と、攻めを切らないためのコンボやセットプレイの練習が特に重要。
+
+まずはドライブゲージを使ってでも強いコンボや起き攻めを狙った方が勝てるはず。最初はBOしても仕方ない。
+
+初級者なら-5くらいでもヒット確認なしで撃ち切ってしまってもいいかも。
 
 ## 中級者
 
