--- a/shared/engagement/popular/集客.md
+++ b/shared/engagement/popular/集客.md
@@ -40,3 +40,5 @@ https://blog.hubspot.jp/website/what-is-a-landing-page
 
 新規顧客の獲得と既存顧客の喪失が同量なら、新規顧客が優先。なんなら既存顧客の喪失がもう少し大きくても新規顧客が優先。新規顧客が増えないと長続きしない。
 ただ、あまりにも既存顧客を失ってしまうと今の経営が成り立たなくなる。
+
+カラオケなんかは学生（新規）と会員（既存）だけ安くて、それ以外は高めの価格設定になっている。
