--- a/shared/voice/training/tips/口を開ける.md
+++ b/shared/voice/training/tips/口を開ける.md
@@ -27,3 +27,9 @@
 それ以上開けると唇を合わせる発音で顎を動かさないといけなくなる。
 
 発音が必要ないならできるだけ口も開けた方が喉は開けやすい。
+
+口を開けすぎるとあくびのように抜けた声になる。
+口の中でも響かせるためには開けすぎてはいけない。
+
+発音のために顎を動かしてしまうと響きが大きく変わってしまう。
+できるだけ顎は動かさずに唇と舌でコントロールするとレガートになりやすい。
