--- a/shared/voice/training/tips/声帯を張る.md
+++ b/shared/voice/training/tips/声帯を張る.md
@@ -1,6 +1,6 @@
 ## Why
 
-声帯を張ることで大きく強い声になる。
+声帯を張ることで大きく重く厳しい感じの声になる。
 
 ## How
 
@@ -8,6 +8,8 @@
 
 - 声帯を伸ばす
 - 声帯に力を入れて硬くする
+
+声帯に力を入れると声が硬くなる。
 
 ## その他
 
@@ -24,3 +26,21 @@
 
 声帯の張りは基本的に曲の中で一定でいい。
 ただ、マイクを使う場合はそこまで大きな声が必要ないので、小声で抜くのもありっちゃあり。
+
+声帯に力を入れずに、引っ張って張る。
+
+声帯を伸ばすと張ることにもなるので、男で裏声を使わずに高い声を出すとどうしても強い声になりやすい。
+
+ミセスのダンスホールなんかは声帯のテンションゆるゆるで歌ってる。
+
+声帯が緩いと息が強くなるほど息が漏れやすくなる。ウィスパーボイスかハスキーボイスになる。
+
+優しい声は声帯のテンションが弱くて、厳しい声は声帯のテンションが強い。息の強さは同じ。
+
+声帯のテンションが常に高すぎるので、息は強いけど声帯は緩めたい。
+
+強い声にしても、硬い声にはしたくない。重く、柔らかい声にする。
+喉を広げて、腹から息を強くする。
+
+息を細く抑えて、喉を下げて、舌を出したまま声を出す練習。喉を締めずに大きな声を出す練習。慣れたらピッチを上げる。
+https://youtube.com/shorts/Zvpf7Lcfb2E?si=nc8lr40hK2s7h9x4
