--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -32,3 +32,6 @@
 低音で声帯を維持できてないならそもそも声帯を維持する力が弱すぎる。
 
 高音を練習する場合、喉を下げるためにも一旦低音を経由すると出しやすくなりがち。
+
+高音でもまずは柔らかい声で出せないといけない。
+硬い声になっているなら声帯に力が入って硬くなっている。
