--- a/games/Street-Fighter/Six/characters/Gouki/豪鬼の特徴.md
+++ b/games/Street-Fighter/Six/characters/Gouki/豪鬼の特徴.md
@@ -39,10 +39,13 @@
 
 ## モダン操作
 
+M豪鬼は火力がなくて、体力が少ないのを補いきれない。立ち回りも弱い。
+
 モダンは2MPないのが結構きつい。
 起き上がりに重ねる技がないし、差し合いで振る技もない。
 
 豪鬼のモダン昇竜はめくりを落としにくい。
+2HPにするのもあり。
 
 アシストコンボはイマイチ。リーサルなら使ってもいいけど、いちいちゲージを使ってしまう。しかもAC1は雑魚。
 
