--- a/shared/devotion/緊張と集中の違い.md
+++ b/shared/devotion/緊張と集中の違い.md
@@ -11,8 +11,10 @@
 
 緊張したら誰かに事細かに指示してもらってひたすら従うのもあり。
 
-緊張してる？
+- 緊張しているか？
 
 緊張はある種の期待でもある。
 
 ワクワクするのが良い緊張。挑戦できる。心理的安全性。
+
+緊張と集中は近い状態だが、集中の対象が間違っていると緊張と呼ばれがち。集中の対象を定めて、せっかくの緊張を活かすのが大事。
