--- a/shared/discussion/提案.md
+++ b/shared/discussion/提案.md
@@ -9,3 +9,6 @@
 3. 問題に気づいていて言葉にできる
 4. 問題に気づいていて解決策がわかっている
 5. 問題に気づいていて解決できる
+
+問題を報告するだけのレベルと、その上で対策も提案するレベルがある。
+対策の提案には、それを相手に納得させる根拠の提示も含まれる。上司や仲間に方法や効果を説明する。
