--- a/shared/education/tips/宗教.md
+++ b/shared/education/tips/宗教.md
@@ -19,3 +19,11 @@
 多神教的な価値観からすると一神教は神の一柱がイキってるイキリ神なんよ。
 
 宗教は教育の面が重要。民族や文化を形成する基礎になる。
+
+独自の神を定めずに、宗教としての在り方を定めるだけの宗教があったっていい。
+
+宗教はエンゲージメントと相性がいい。
+
+神への信仰は、無私や喜捨と深い関わりがある。
+
+単純に教育によって恩を売ってエンゲージメントを高める面もある。
