--- a/shared/execution/planning/project/期限.md
+++ b/shared/execution/planning/project/期限.md
@@ -22,3 +22,6 @@
 期限はできるだけ早めに設定するべき。できるかどうかわからないくらいギリギリがいい。その上で、超えてもいいように約束する。
 期限を遠くすると完了もそれだけ遅れる。期限まで進めなくなる。
 顧客に伝える期限と作業者に伝える期限は別々に設定するべき。これはマネージャーやディレクターを配置する意味の一つでもある。
+
+いくら速く進めても、規模が大きすぎると期限は伸びる。
+短期間で終わらせるためには、規模を小さく抑えないといけない。
