--- a/shared/execution/planning/計画と実行.md
+++ b/shared/execution/planning/計画と実行.md
@@ -121,3 +121,6 @@ Done にする前に Ready にしないといけない。
 計画を立てたら、実行しないと意味がない。
 
 time management でまとめてもいいかも。
+
+計画段階ではいくらでも反対したり代案を出したりしてもいいが、動き始めたらキリがいいところまで一直線に進むべき。実行を邪魔してはいけない。計画を見直す時期をあらかじめ決めておくと区切りにしやすい。
+特に組織では、実行段階で計画に反対する者を排除しなければならない。
