--- a/shared/life/欲.md
+++ b/shared/life/欲.md
@@ -28,3 +28,7 @@ Hope
 欲の方向が他人と違うほど、自分の要らないものを売って自分の要るものを買う、がうまくいきやすいのかも。
 
 欲を出す。
+
+自らの願いを叶えるために、周りが勝手に手伝うのは限界がある。
+自らが責任を負って、宣言して、対価を支払わなければならない。
+それが欲を持つということ。
