--- a/shared/voice/training/tips/声帯を張る.md
+++ b/shared/voice/training/tips/声帯を張る.md
@@ -44,3 +44,9 @@
 
 息を細く抑えて、喉を下げて、舌を出したまま声を出す練習。喉を締めずに大きな声を出す練習。慣れたらピッチを上げる。
 https://youtube.com/shorts/Zvpf7Lcfb2E?si=nc8lr40hK2s7h9x4
+
+幾億光年も声帯ゆるゆるで歌いたい。
+
+自分の限界を超えた高さや重さを出そうとすると声帯に力が入って声が硬くなりやすい。
+
+声が大きすぎると不安定になる。もっというと、自分の限界よりも声帯のテンションが高すぎたり息が多すぎたりすると不安定になる。
