--- a/games/Street-Fighter/Six/system/モダン操作の特徴.md
+++ b/games/Street-Fighter/Six/system/モダン操作の特徴.md
@@ -83,3 +83,5 @@ JP、ザンギ、ダルシム、春麗、などはいまいち。
 モダンが強いなら勝つためにモダンを使えばいいし、モダンを使いたくないなら別に勝ちたくないんだからクラシックでトレモだけやってりゃいい。
 
 バーンアウトしたモダンはSAを構えているので、小技や投げで稼ぐのが大事。
+
+AC3からSA1にもいけるキャラはわりとアシコンが優秀と言える。
