--- a/shared/collaboration/仕事を任せる.md
+++ b/shared/collaboration/仕事を任せる.md
@@ -107,3 +107,6 @@ https://x.com/ysk_motoyama/status/1814496851703615906
 
 自分にできないことを他人に任せる。
 自分にできることも他人に任せる。
+
+信用がない人を使うなら朝礼とかでその日のうちに何度か同期する時間を設けるといいけど、信用がある人にとっては無駄な時間でしかない。少なくとも、信用がある人に辞められるリスクを背負っていることは理解しておこう。
+信用がない人と信用がある人は完全に分けて使うべき。
