--- a/shared/engineering/技術者.md
+++ b/shared/engineering/技術者.md
@@ -1,8 +1,6 @@
-# 技師
+# Engineer
 
-Engineer
-
-エンジニア、技術者、とも。
+エンジニア、技術者、技師、とも。
 
 工学を扱う人。
 
@@ -18,3 +16,5 @@ Engineer
 
 技師はいろいろな活動をするので、得意分野でさらに分けられる。
 ソフトウェアエンジニアとか、QAエンジニアとか。
+
+エンジニアが問題に対して「めんどい」と答えるなら、解決策自体は思いついている。
