--- a/shared/music/vocal/歌の技術.md
+++ b/shared/music/vocal/歌の技術.md
@@ -10,3 +10,5 @@
 
 まずは音程の上下と音量の大小をゆっくりコントロールできるようにして、慣れてきたら早く切り替えられるようにする。
 音量なら徐々に大きくするのと小さくするのを繰り返したり、音程なら徐々に上げるのと下げるのを繰り返したり。
+
+声の高さは歌の上手い下手とは関係ない。単にキーを変えないと歌えない曲があるっていうだけ。下にも広いとキーを変えても歌えない。
