--- a/shared/voice/声色.md
+++ b/shared/voice/声色.md
@@ -78,3 +78,5 @@ https://www.venusinfurbroadway.com/narrater/column/pos698/
 自分の色で歌うと合わない曲がある人と、わりと何にでも合う人がいる。
 
 強い言葉をあえて可愛い声で歌うのは可愛い声でしかできない。才能。
+
+W/X/Yみたいに口先で出すようなぴよぴよした声で歌う曲も最近よくある。
