--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -1,25 +1,97 @@
+## 方針
+
 SA1で炎を纏えるなら積極的にまとった方がいい。
 
-SA1が使えるなら積極的に使う。
+## 2LP
+
+- 2LP, 2LP, 強忍蜂
+- 2LP, 2LP, 強飛翔: 1380
+- {端} 2LP, 2LP, cDR 2LP, 4HK-HK, 中飛翔: 1816
+- 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, SA1: 2123
+- {端} 2LP, 2LP, cDR 2LP, 4HK-HK, SA1: 2229
+- 2LP, 2LP, cDR 2LP, 飛燕連脚, ODムササビ, SA2: 2628
+- {端} 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, SA2, 中飛翔: 2750
+- 2LP, 2LP, cDR 2LP, 2MP, 中炎舞, SA3: 3443
+- 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, 強忍蜂, SA3
+
+## 2LP(c)
+
+- 2LP(c), 2MP, 強忍蜂
+- {立} 2LP(c), 2MP, 強炎舞, 強飛翔: 2000
+
+## 2LK
+
+- 2LK, LP, 強忍蜂: 1000 (AC1)
+
+## 2MP(+4)
+
+- {立} 2MP(+4), HP, 強炎舞, 強忍蜂
+- {立} 2MP(+4), HP, 強炎舞, 強飛翔: 2760
+- 2MP(+4), HP, OD忍蜂, J.MP, 強飛翔: 3000 (AC3)
+- 2MP(+4), HP, OD炎舞, 強飛翔: 3190
+- 2MP(+4), HP, OD炎舞, SA1: 3600
+- {端} 2MP(+4), HP, OD炎舞, SA2, 中飛翔: 4710
+- 2MP(+4), HP, OD忍蜂, J.MP, 弱炎舞, SA3: 4800 (AC3)
+
+## HP(+4)
+
+- {立} HP(+4), OD扇-h, HP, 強炎舞, 強忍蜂
+- {立} HP(+4), OD扇-h, HP, 強炎舞, 強飛翔: 3360
+- HP(+4), OD扇-h, HP, OD炎舞, 強飛翔: 3460
+- HP(+4), OD扇-h, HP, cDR 4HK, 2MP, 強炎舞, 強飛翔: 3614
+- {立端} HP(+4), OD扇-h, HP, 強炎舞, SA1: 3600
+- HP(+4), OD扇-h, HP, OD炎舞, SA1: 3940
+- HP(+4), OD扇-h, HP, cDR 4HK, 2MP, OD炎舞, SA1: 4078
+- {立} HP(+4), OD扇-h, HP, 強炎舞, OD忍蜂, J.MP, 弱炎舞, SA3: 5380
+- HP(+4), OD扇-h, HP, cDR 4HK, 2MP, 強炎舞, 強忍蜂, SA3
+
+## 2HP(+2)
+
+- 2HP(+2), 2MP, 強忍蜂
+- {立} 2HP(+2), 2MP, 強炎舞, 強飛翔: 2920
+- 2HP(L+2), 2MP, OD炎舞, 強飛翔: 3200
+- 2HP(L+2), 2MP, OD炎舞, SA1: 3760
+
+## 2HP(+4)
+
+- {端} 2HP(+4), 4HK-HK, 強飛翔: 3110
+- {端} 2HP(+4), 4HK-HK, SA1: 3560
+
+## HK(pc)
+
+パニカンで膝崩れになる。
+DR HPが無難だけど、近かったら直接HPでも届く。
+
+- HK(pc), DR HP, 強炎舞, 強忍蜂
+- HK(pc), DR HP, 強炎舞, 強飛翔: 2600
+
+## 4HK(+4)
+
+- 4HK(+4), 2MP, 強炎舞, 強飛翔: 2920
+- {端} 4HK(+4), 2MP, 強炎舞, SA1: 3240
+- 4HK(+4), 2MP, OD炎舞, SA1 (AC2): 3760
+- {端} 4HK(+4), 2MP, OD炎舞, SA2, 中飛翔: 4710
+
+## J.MP
+
+対空から。
+
+- {空} J.MP, ムササビ: 1720
+- {空} J.MP, ODムササビ, SA2(空): 4160
+
+## 飛燕連脚
+
+- 飛燕連脚, ムササビ: 1570
+- 飛燕連脚, ODムササビ, 強飛翔: 2290
+- 飛燕連脚, ODムササビ, SA2: 3090
+
+## その他
 
 強炎舞が立ち限定。
 4HKに強制立たせ効果がある。
 
-- 2LK, LP, 強忍蜂: 1000 (AC1)
-
-- 2MP, OD炎舞, SA1: 3200 (AC2)
-
-- HP, OD忍蜂, J.MP, 弱炎舞, SA3: 4500 (AC3)
-- (端) HP, OD忍蜂, J.MP, 強飛翔: 2740
-
-- LK-LK-LK, ムササビ
-- (端) LK-LK-LK, ODムササビ, 強飛翔
-- LK-LK-LK, ODムササビ, OD飛翔
-
 - (端) 4HK-HK, 弱飛翔: 2540
 - (端) 4HK-HK, SA1: 3200
-
-- HP, 強炎舞, 強飛翔: 2440
 
 - (相) DR HK, SA2: 3320
 
@@ -27,31 +99,9 @@ SA1が使えるなら積極的に使う。
 
 - 強炎舞(焔), 弱炎舞, SA3
 - 強炎舞(焔), SA1(焔)
-- 強炎舞, 強飛翔
-- 強炎舞, 強忍蜂
 - (端) 強炎舞, SA1
 - OD炎舞, SA1
 
-立川さんは確反でHP, OD扇-Hから繋いでた。
-
-- HP(pc), 溜めOD扇, HP, 強炎舞, 強飛翔: 3240
-- HP(pc), 溜めOD扇, HP, 強炎舞, OD忍蜂, J.MP, 弱炎舞, SA3: 5260
-- HP(pc), 溜めOD扇, HP, 強炎舞, 強忍蜂M: 2960
-
-- 2LP(c), 2MP, 強炎舞
-
-- 2HP(pc), 2MP, 強炎舞
-
-- HK(pc), DR HP, 強炎舞, 強飛翔
-
-- DR 4HK, 2MP, 強炎舞
-
-- (端) HP, OD炎舞, SA2, 中飛翔: 4700
-
 - (遠) OD扇, DR 2LP, (扇), HP, 強炎舞, 強飛翔: 2128
 
-- (端) 2HP(pc), 4HK-HK, 強飛翔: 3270
-
-端ではOD炎舞からSA2で昇竜締めが強い。
-
-- {空} J.MP, ODムササビ, 空SA2: 4160
+モダンはOD炎舞, 強忍蜂よりもOD忍蜂, J.MP, ムササビの方が高くなりやすい。
