--- a/games/Street-Fighter/Six/characters/Mai/舞の確反.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の確反.md
@@ -1,12 +1,14 @@
 ## 4F
 
-- 2LP(pc), 強炎舞
-- 2LP(pc), cDR 4HK
+- 2LP, 2LP, 強忍蜂
+- 2LP(+4), 強炎舞
+- 2LP(+4), cDR 4HK
 
 ## 6F
 
-- 2MP(pc), HP, ...
+- 2MP(+4), HP, ...
 
 ## 7F
 
-- 4HK(pc), 2MP, 強炎舞, ...
+- 4HK(+4), 2MP, 強炎舞, ...
+- HP(+4), OD扇h, HP, cDR 4HK, 2MP, ...
