--- a/games/Street-Fighter/Six/characters/使用キャラを選ぶ.md
+++ b/games/Street-Fighter/Six/characters/使用キャラを選ぶ.md
@@ -37,6 +37,13 @@
 
 スト6はモダンがあるので、最初に選ぶキャラはタメキャラじゃない方がいい。SPで無敵昇竜が出るキャラがいい。
 
+## 個人的にきつかったキャラ
+
+- Mジェイミー: 火力が低いわりに酒で攻めが切れやすい、OD無影蹴とコマ投げが強いのでもっと使っても良かったかも
+- M豪鬼: 体力がない、Mは特に火力が出せないし立ち回りも弱い
+- Mダルシム: SA2にも無敵がない、Mじゃなくても守りがきつい
+- Mガイル: Mは特に中段とHPがなくて火力が出せない
+
 ## その他
 
 火力のあるキャラは不利な相手でもワンチャンあるのが面白いところだけど、不利なキャラが多くなるように調整されていることが多い。
