--- a/games/Street-Fighter/Six/characters/Guile/ガイルの確反.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの確反.md
@@ -2,11 +2,15 @@
 
 ## 7F以上
 
-CガイルならHP始動が基本。発生7Fだし、結構長い。
-HP(+4), 3HK, 強サマソならHPの最大射程でも入るし、2860減る。
+CガイルならHP始動が基本。4HPよりもダメージが高くて、発生7Fで、長め。
+HP(pc), 3HK, 強サマソならHPの最大射程でも入るし、2860減る。SAにはいけないので、SAの場合はHP(pc), 2MP, 強サマーとか。
 
 ## 6F
 
 Dリバには2MP(+4), HP, cDR HKのルート。
 
 ## 4F
+
+## インパクト返し
+
+- DI(pc),
