--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -26,7 +26,11 @@
 
 隙があったらクロスにしたい。
 
-弾の撃ち合いは強ブレイドで相手の弾を一発受けてからクロスに派生するのが強い。発生は遅い。
+強/ODブレイドは2発分になるので、1発相殺しても残ってソニックをクロスにできる。
+
+ODブレイドは普通のソニックがODクロスになる。
+
+弾の撃ち合いは強ブレイドで相手の弾を一発受けてからクロスに派生するのが強い。発生は遅いので、ソニックをガードさせた後とか。
 
 近距離で弾を撃っているとインパクトで返されがち。
 2LP, 2MP, 4HPなどを置くと返しやすい。
