--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
@@ -1,133 +1,178 @@
-## MP
-
-- MP-4HP, 強サマー: 2320
-- (端) MP-4HP, ODソニック, 強サマー: 2980
-- MP-4HP, ODソニック, SA3: 4400(AC3)
-
-## MP(pc)
-
-- MP(pc), MP-4HP, 強サマー: 2780
-- MP(pc), 4HP, cDR MP, MP-4HP, 強サマー: 3176
-- MP(pc), 4HP, cDR MP, MP-4HP, ODソニック, SA3: 4798
-
-## HK(c)
-
-- HK(c), 2LP, 強サマー: 2380
-- HK(c), 2LP, ODソニック, SA3: 4460
-
-## {C} HP(pc)
-
-C限定。
-
-- HP(pc), 3HK, 強サマー: 2860
-- HP(pc), HP, cDR HK, 2MP, 強サマー: 3166
-- HP(pc), HK/4HP, 強SA1, 強サマー: 3760
-- {中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3775
-
 ## 2LP
 
 - 2LP, cDR 2LP, MP-4HP, 強サマー: 1752
 - 2LP, cDR 2LP, MP-4HP, 強SA1, ODサマー: 2362
 - 2LP, cDR 2LP, MP, 2MP, 強サマー, SA3: 3368
 
-## 2LP(+4)
+## 2LP(+2)
 
-- 2LP(+4), 2MP-2MP, 強サマソ: 1780
-- 2LP(+4), MP-4HP, 強サマソ: 2100
-- {C} 2LP(+4), HP, cDR HK, 2MP, 強サマソ: 2446
-- 2LP(+4), MP-4HP, 強SA1, ODサマソ: 2990
-- {C} 2LP(+4), HP, cDR HK, 2MP, 強サマソ, SA3: 4446
+- 2LP(+2), 2MP-2MP, 強サマー: 1780
+- 2LP(+2), MP-4HP, 強サマー: 2100
+- {C} 2LP(+2), HP, cDR HK, 2MP, 強サマー: 2446
+- 2LP(+2), MP-4HP, 強SA1, ODサマー: 2930
+- 2LP(+2), 2MP, 強サマー, SA3: 3760
+- {C} 2LP(+2), HP, cDR HK, 2MP, 強サマー, SA3: 4446
 
 ## 2LK
 
 - 2LK, 2LP, LK, 強サマー: 1490(AC1)
 - 2LK, 2LP, LK, cDR LP, MP-4HP, ODソニック, SA3: 3384(AC3)
 
+## 4LK(+4)
+
+- 4LK(+4), 2LP, 強サマー: 1920
+- 4LK(+4), 2LP, 強SA1, ODサマー: 3150
+- 4LK(+4), 2LP, 強サマー, SA3: 4320
+
+## MP
+
+- MP-4HP, 強サマー: 2320
+- (端) MP-4HP, ODソニック, 強サマー: 2980
+- MP-4HP, ODソニック, SA3: 4400(AC3)
+- MP, 2MP, 強サマー, SA3: 4720
+
+## MP(+2)
+
+- MP(+2), MP-4HP, 強サマー: 2780
+- MP(+2), HP, cDR HK, 2MP, 強サマー: 3112
+- MP(+2), MP-4HP, 強SA1, ODサマー: 3720
+- MP(+2), HP, cDR HK, MP-4HP, 強SA1, ODサマー: 3902
+- MP(+2), HP, cDR HK, 2MP, 強サマー, SA3: 5112
+
+## MP(+4)
+
+- MP(pc), 4HP, cDR MP, MP-4HP, 強サマー: 3176
+- MP(+4), 4HP, 強SA1, ODサマー: 3750
+- MP(pc), 4HP, cDR MP, MP-4HP, ODソニック, SA3: 4798
+
 ## 2MP
 
 - 2MP-2MP, SA1, ODサマー: 3000(AC2)
+
+## 2MP(+2)
+
+- 2MP(+4), 2MP, 強サマー: 2320
+- 2MP(+4), 2MP-2MP, 強SA1, ODサマー: 3210
+- 2MP(+4), 2MP, 強サマー, SA3: 4720
 
 ## 2MP(+4)
 
 主にDリバの確反。
 
-- 2MP(+4), 2MP, 強サマー: 2440
-- 2MP(+4), HP, cDR HK, 2MP, 強サマー: 3232
-- 2MP(+4), 2MP-2MP, 強SA1, ODサマー: 3120
-- 2MP(+4), 2MP, 強サマー, SA3: 4840
-- 2MP(+4), HP, cDR HK, 2MP, 強サマー, SA3: 5232
+- 2MP(+4), MP-4HP, 強サマー: 2590
+- {端} 2MP(+4), MP-4HP, ODソニック, 強サマー: 3220
+- {C} 2MP(+4), HP, cDR HK, 2MP, 強サマー: 3112
+- 2MP(+4), MP-4HP, 強SA1, ODサマー: 3720
+- {C} 2MP(+4), HP, cDR HK, 2MP, 強サマー, SA3: 5112
+
+## {C} 6MP(+2)
+
+- {C} 6MP(+2), 2LP, 強サマー: 2220
+- {C} 6MP(+2), 2LP, ODサマー: 2380
+- {C} 6MP(+2), 2LP, SA1: 2700
+- {C端} 6MP(+2), 2LP, 弱ソニック, HP, cDR HK, 2MP, 強サマー: 3346
+- {C端} 6MP(+2), 2LP, 強SA1, ODサマー: 3610
+- {C} 6MP(+2), 2LP, 強サマー, SA3: 4620
+- {C端} 6MP(+2), 2LP, 弱ソニック, HP, cDR HK, 2MP, 強サマー, SA3: 5346
+
+## {C} 6MP(+4)
+
+- {C} 6MP(+4), 2MP, 強サマー: 2520
+- {C} 6MP(+4), 2MP, ODサマー: 2680
+- {C端} 6MP(+4), 2MP-2MP, ODソニック, 強サマー: 2980
+- {C} 6MP(+4), 2MP, 強SA1, ODサマー: 3750
+- {C} 6MP(+4), 2MP, 強サマー, SA3: 4920
 
 ## 2MK
 
 - 2MK-6MP: 1140
-- 2MK, 2LP, 強サマー: 1580
-- 2MK, 2LP, ODソニック, SA3: 3440/3290
+- 2MK, 2LP, 強サマー: 1720
+- 2MK, 2LP, 強サマー, SA3: 3720
+
+## 2MK(+2)
+
+- 4MK(+4), 2MP, 強サマー: 1960
+- 4MK(+4), 2MP, 強SA1, ODサマー: 3020
+
+## 2MK(+4)
+
+- 4MK(+4), MP, 2MP, 強サマー: 2240
+- {C} 4MK(+4), HP, cDR HK, 2MP, 強サマー: 2586
+- 4MK(+4), MP-4HP, 強SA1, ODサマー: 3130
+- 4MK(+4), MP, 2MP, 強サマー, SA3: 4240
+- {C} 4MK(+4), HP, cDR HK, 2MP, 強サマー, SA3: 4586
+
+## {C} HP(pc)
+
+- {C} HP(pc), 3HK, 強サマー: 2860
+- {C} HP(pc), 3HK, ODサマー: 3000
+- {C} HP(pc), HP, cDR HK, 2MP, 強サマー: 3166
+- {C} HP(pc), HK/4HP, 強SA1, ODサマー: 3760
+- {C中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3775
+- {C} HP(pc), HK/4HP, SA3: 4520
+- {C} HP(pc), 2MP, 強サマー, SA3: 4540
+- {C} HP(pc), HP, cDR HK, 2MP, 強サマー, SA3: 5166
 
 ## 4HP
-
-HK, SA1はクラシックのみ。
 
 - (中央) 4HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3479
 - (中央) 4HP, cDR HK, HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 4067
 - (中央) 4HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, SA3: 4799
 
-## 6HP
+## {立} 6HP
 
-- (立) 6HP, 2LP, 強サマー: 2060
-- (立) 6HP, 2LK, 2LP, LK, 強サマー: 2290
+- {立} 6HP, 2LP, 強サマー: 2220
+- {立} 6HP, 2LP, 強SA1, ODサマー: 3450
+- {立} 6HP, 2LP, 強サマー, SA3: 4620
 
-## 6HP(c)
+## {立} 6HP(c)
 
-- (立) 6HP(c), MP-4HP, 強サマー: 3020
+- {立} 6HP(c), MP-4HP, 強サマー: 3020
+
+## HK(+2)
+
+- HK(+2), 2LP, 強サマー: 2380
+- HK(+2), 2LP, ODソニック, SA3: 4460
 
 ## 6HK(pc)
 
 - {端} 6HK(pc), 2HK-3HK, 強サマー: 2830
 - {C端} 6HK(pc), HP, cDR HK, 強サマー: 3470
 
-## DR MP
+## ODブレイド-ODクロス(壁)
 
-- DR MP, MP-4HP, 強サマー: 2780
-- DR MP, MP-4HP, 強SA1, 0Dサマー: 3720
-
-## DR HP
-
-- DR HP, MP-4HP, 強サマー: 2520
-
-## DR 2LP
-
-- DR 2LP, 2MP, 強サマー: 1760
-
-## DR 2MP
-
-- DR 2MP, 2MP, 強サマー: 2320
-- DR 2MP, MP-4HP, 強サマー: 2590
-
-## DR 2MK
-
-- DR 2MK, 2MP, 強サマー: 1960
-- DR 2MK, MP-4HP, 強サマー: 2240
-- {C} DR 2MK, HP, cDR HK, 2MP, 強サマー: 2586
-
-## DR 4LK
-
-- DR 4LK, 2LP, 強サマー: 1920
+- ODブレイド-ODクロス(壁), DR HK, 強サマー: 3332
+- ODブレイド-ODクロス(壁), DR HK, 強サマー, SA3: 5372
 
 ## DI(pc)
 
+- {C} DI(pc), 3HK, 強サマー: 2740
 - DI(pc), MP-4HP, 強サマー: 2700
-- DI(pc), 2MP-2MP, SA1, ODサマー: 3100(AC2)
-- DI(pc); 2HK-3HK, 強サマー, SA1: 3220
-- DI(pc), MP-4HP, ODソニック, SA3: 4460(AC3)
+- DI(pc), 2MP-2MP, SA1, ODサマー: 3100 (AC2)
+- DI(pc); 2HK-3HK, 強サマー, SA1: 3220 (膝崩れを待って2HK)
+- DI(pc), MP-4HP, 強SA1, ODサマー: 3590
+- DI(pc), MP-4HP, SA3: 4260
+- DI(pc), MP-4HP, ODソニック, SA3: 4460 (AC3)
+- {C} DI(pc), HP, cDR HK, 2MP, 強サマー, SA3: 5046
 
-- (中央) DI(pc), 4HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1
-- (中央) DI(pc), 4HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA3
+- {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3655
+- {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA3
 
 ## DI(壁)
 
+- DI(壁), HK, 強サマー: 2420
 - {C} DI(壁), 3HK, 強サマー: 2580
-- DI(壁), 2MP-2MP, SA1, ODサマー: 2940(AC2)
+- DI(壁), 4HP, 強SA1, ODサマー: 3480
 - DI(壁), 強サマー, SA3: 4320
+- DI(壁), HK, 強サマー, SA3: 4420
+
+ガードだと3HKが当たらないので、2HK-3HKにする。ダメージは下がる。
+
+## DI(g)(壁)
+
+- DI(g)(壁), 2MP, 強サマー: 1600
+- DI(g)(壁), 4HP, 強SA1, ODサマー: 2912
+- DI(g)(壁), 4HP, SA3: 3840
 
 ## その他
 
@@ -136,3 +181,11 @@ HK, SA1はクラシックのみ。
 溜めを離しても10Fは溜めが残っている。
 
 モダンは溜めたままHKを出そうとすると4HPになるので、HK, SA1ができない。
+
+MP-4HPや2MP-2MPからSA3はカス当たりになる。
+
+MP, 2MPが入るところはMP-4HPも入る。MPしか届かない場合はMP-4HPにするべき。
+ただし、MP-4HP, SA3はカス当たりになる。
+
+- {端} 6MP(+2), 2LP, 弱ソニック, 2MP, 弱ソニック, 4HP, cDR HK, ...
+- {端} 6MP(+2), 2LP, 弱ソニック, 2MP, 弱ソニック, 4HP, 弱ソニック, HK, ...
