--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
@@ -26,9 +26,9 @@
 
 ## MP
 
-- MP-4HP, 強サマー: 2320
-- (端) MP-4HP, ODソニック, 強サマー: 2980
-- MP-4HP, ODソニック, SA3: 4400(AC3)
+- MP, 2MP-2MP, 強サマー: 2320
+- {端} MP, 2MP-2MP, ODソニック, 強サマー: 2780
+- {端} MP, 2MP-2MP, 強SA1, ODサマー: 3210
 - MP, 2MP, 強サマー, SA3: 4720
 
 ## MP(+2)
