--- a/games/Street-Fighter/Six/差し合い.md
+++ b/games/Street-Fighter/Six/差し合い.md
@@ -146,3 +146,5 @@
 中足からダメージを取れないキャラはあまり前に歩く意味がない。
 
 相手がラッシュにパリィを一瞬押してくるなら、あえて中下段を遅らせてパリィが切れたところに当てると、相手もちゃんとガードしないといけない。
+
+基本的に差し合いはラッシュを止める小パンか中パン、弾や突進技を受けるパリィあたりに指を置いておきたい。差し合いのインパクトは最悪技を振る時だけでいい。
