--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -60,3 +60,6 @@ careというのは、対象を失わせないための技術。
 何かを失いたくないなら、それを世話するべき。
 
 かわいさ、あるいは「世話したくなる感じ」はどこからくるのか。
+
+そこまで人間に手間をかける必要がない、と思っている。
+ただ、もっと手間をかけた方が好かれやすいかも。
