--- a/shared/commerce/marketing/channels/イベント.md
+++ b/shared/commerce/marketing/channels/イベント.md
@@ -37,3 +37,33 @@ https://www.kokuchpro.com/
 イベントの開催頻度が多いとそこだけで十分になる。参加者を独占しやすい。
 
 イベントは周期が決まっていると、開催する側も「やらなきゃ」って気持ちになる。
+
+イベントページに何を書くか。
+
+- 概要
+- 開催条件
+  - 最低人数
+  - 雨天中止
+- 参加条件
+  - 年齢制限
+- 当日の流れ
+  - 集合場所
+  - 集合時間
+  - 解散時間
+- 禁止事項
+  - 勧誘
+  - ナンパ
+  - 無断撮影
+  - 喫煙NG
+  - など
+- 途中参加、途中退室可能かどうか
+- 参加費
+- 連絡先
+  - メーリス
+  - LINEグループ
+  - LINEオープンチャンネル
+
+注意事項の例:
+
+「マルチの勧誘など、迷惑行為を見かけた方は運営まで連絡してください。」
+「サークルやイベントの雰囲気を乱す行動をされる方、運営側の指示に従っていただけない方は、参加をお断りする場合があります。」
