--- a/shared/family/marriage/結婚.md
+++ b/shared/family/marriage/結婚.md
@@ -106,3 +106,6 @@
 他人と一緒に生きたいと思うのはよっぽどだ。まずは友人や恋人として一緒にいたいと思える人がいたら結婚してもいいと思うけど、無理に結婚をゴールにしてもうまくいかない。
 
 勝たないことが夫婦円満の秘訣。
+
+親族から反対される結婚は避けるべき。
+ただ、理由についてはよく聞くといい。慣習や常識が理由ならそれは過去のことなので別に無視してもいいけど、相手の性格や経歴は現在に関わることなので自分が盲目になっているだけかも。
