--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -929,3 +929,10 @@ loveとgoodの概念は近い。
 愛や信頼の概念と、実際に愛されたり信頼されたりするためのハウツーはまた別。
 
 必要じゃなくても欲しいもの。
+
+愛しているからといって、変えてはいけないわけではない。
+影響を受けながらも、影響を与えることはあり得ることだ。
+
+受け入れるというのは、そのままを許容することとは少し違う。ただ、影響を受けることに喜びを覚える。
+
+地球温暖化の問題意識を持つ人は、自然を愛するというよりも、自然を畏れている。
