--- a/shared/music/vocal/training/tips/歌に抑揚をつける.md
+++ b/shared/music/vocal/training/tips/歌に抑揚をつける.md
@@ -109,3 +109,5 @@ https://youtu.be/ossqU_PajA4?si=_qLcHlHCXEOZgNOk
 
 そもそもリズムやメロディ自体も抑揚。
 ビートやピッチの変化が全くないとつまらない。
+
+声を強くする方法にも、声帯を伸ばす、声帯に力を入れる、息のプレッシャーを上げる、などがある。
