--- a/shared/music/vocal/training/tips/歌詞カードを作る.md
+++ b/shared/music/vocal/training/tips/歌詞カードを作る.md
@@ -22,3 +22,5 @@
 6. しゃくりやフォールなど特徴的なメロディを記載する
 
 まずはリズムが重要。
+
+英語の歌詞はまずアクセントがどこにあるか把握して、英語にマーキングするところから始めるといい。読み仮名をつけたりするのはその後。まずリズムがわからないと歌いづらいし、読み仮名をつけるにも聞き取りづらい。
