--- a/shared/voice/training/tips/声帯を張る.md
+++ b/shared/voice/training/tips/声帯を張る.md
@@ -50,3 +50,15 @@ https://youtube.com/shorts/Zvpf7Lcfb2E?si=nc8lr40hK2s7h9x4
 自分の限界を超えた高さや重さを出そうとすると声帯に力が入って声が硬くなりやすい。
 
 声が大きすぎると不安定になる。もっというと、自分の限界よりも声帯のテンションが高すぎたり息が多すぎたりすると不安定になる。
+
+フレーズの中では基本的に声帯のテンションは一定にしないと不安定になる。
+
+ウルトラソウルなんかは意外と声帯のテンションが強くないのかも。
+弱くはないけど、強すぎるのも違う。中間くらい。どちらかというとエッジボイス。
+
+声帯のテンションが強くなるほど、声を出しにくくなる。強い息が必要。
+
+ポップスは息よりも声帯のテンションを変えて強弱をつけることが多い。
+バラードなんかは声帯ゆるゆるでゆったり歌った方がそれっぽい。
+
+髭ダンも声帯ゆるゆる。
