--- a/shared/communication/channels/sex/恋.md
+++ b/shared/communication/channels/sex/恋.md
@@ -37,3 +37,7 @@ romance に集約してもいいかも。
 
 恋の目的はセックスなので、特別扱いするのが恋というわけでもない。
 ただ、愛や情を見せるために特別扱いすることはある。
+
+恋は冷める。
+3年くらいしか持たないと言われている。
+長く付き合うなら、親愛の情に切り替えていかないといけない。
