--- a/shared/voice/training/tips/声を育てる.md
+++ b/shared/voice/training/tips/声を育てる.md
@@ -19,3 +19,6 @@
 
 楽器のスケールが大きくなるほど、音は低くなりやすい。
 体の大きさ、声帯の長さ、テンションの強さ、などがスケールに影響する。
+
+声をよくするのは野球で言えば球速160キロを目指すようなもの。
+自分の限界を超えた球を投げ続けることで成長するが、限界を越えればコントロールするのは難しくなる。成長の過程で楽な方に流れてはいけない。まずは制御できなくても限界を超えて、慣れてきたら制御する。小さく収まらない。
