--- a/shared/art/創作.md
+++ b/shared/art/創作.md
@@ -1,6 +1,10 @@
+# Creative
+
 本当に自分にぴったり作るには新たに作るしかない。
 自分にぴったりのものが欲しいのは創作意欲の基盤の一つ。
 
 そもそもないものは新たに作るしかない。
 
 新たに作る場合、自分で作るか、誰かに依頼するか。
+
+創作は開発と近いけど、「できる」という部分がなくてもいい。なんの役に立たなくてもいい。
