--- a/shared/art/技術.md
+++ b/shared/art/技術.md
@@ -1,4 +1,14 @@
-# 技術
+# Technique
+
+技、技法、技術
+
+Art, Technique
+
+心技体の体が強いとまずは体を扱えるようにしないといけない。体に振り回されているうちは技を伸ばしても無駄になる。
+
+体や心と違って技は伸びやすい。ただ、体や心が基礎。特に体を使ったスポーツや歌は、技だけ伸ばしても体の変化で技も変化しないといけないことがあり、やり直しになることがある。悪い癖がついてしまうこともある。
+
+誰かができるなら、誰もができる。
 
 ある目的を達成するために必要な知識や技能、方法、手順、ツール、素材、設備、事実などの総体。実践的な応用。
 
