--- a/shared/art/表現を工夫する.md
+++ b/shared/art/表現を工夫する.md
@@ -9,3 +9,18 @@
 技法を工夫する、探究するプロセスがアート。
 
 間接的な言い回しは工夫の余地が大きい。
+
+- どんな工夫をするか
+- どんな工夫をしているか
+
+技術面の工夫だけがアートではない。思想面など、技術以外の工夫もある。
+
+工夫がアートなので、素材そのままとか真似るだけとかはアートとは言えない。
+逆に、素材そのままでも思想的な工夫が加わるだけでアートになる。
+タイトルをつけるのもアートの一環だし、展示する空間もまたアートの一部。
+
+思考や感情を乗せて工夫するのが記録とアートの違い。
+
+素材に手を加えて、別の製品にすること。
+
+様々な方法を試すのが技術や工夫の基礎。
