--- a/shared/art/遊びは学び.md
+++ b/shared/art/遊びは学び.md
@@ -5,3 +5,11 @@
 正しいことばかりしていると遊びが疎かになる。
 
 行動を最適化しすぎて遊びがなくなると学びもなくなってしまう。
+
+遊びの目的は学ぶこと。
+
+何か新しいことをするなら、成功よりも何を学べるかを考えておくといいかも。
+
+遊んでないのは、学ぶ気がないのかも。
+
+遊ばないと可能性が広がらない。
