--- a/shared/art/tips/作品を鑑賞する.md
+++ b/shared/art/tips/作品を鑑賞する.md
@@ -1,5 +1,7 @@
 # 鑑賞 Appreciation
 
+「鑑賞」というと、評価するという意味が強い。
+
 作品という「表現」だけじゃなくて、その裏にある作者の「関心」や作品づくりのための「探究」に目を向けるのも美術鑑賞の楽しみとして存在する。
 
 関心のある属性が少ないほど、鑑賞する作品について語れることは少なくなる。
