--- a/shared/human/body/muscle/training/tips/腹筋を鍛える.md
+++ b/shared/human/body/muscle/training/tips/腹筋を鍛える.md
@@ -6,3 +6,5 @@ https://youtu.be/YDQgDbHPTFA?si=gMgkA9G6KK1locN1
 
 息を吐きながら横隔膜をとにかく上に持ち上げる、腹を凹ませる練習をドローイングという。
 ドローインと呼んでいる場合もある。
+
+歌いながらプランクや腕立てとか。
