--- a/shared/voice/training/tips/地声を出す.md
+++ b/shared/voice/training/tips/地声を出す.md
@@ -20,6 +20,8 @@ https://www.youtube.com/watch?v=MS_in4t7ohA
 
 ## その他
 
+普通に自然な最低音でロングトーンするだけでも裏返るなら、声帯の伸縮の前に、ロングトーンで安定した最低音を30秒維持する。
+
 地声はやっぱりエッジボイスからか。できるだけ声が漏れずに、パチパチ音だけをできるだけ少ない息で。しっかり声帯を閉じる。
 
 普段から裏声が多い人は地声の筋肉がサボっているのでまず鍛えないといけない。
