--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -4,28 +4,32 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 
 ## 2LP
 
-- 2LP, 2LP, 強忍蜂
+- 2LP, 2LP, 弱忍蜂: 1100
 - 2LP, 2LP, 強飛翔: 1380
+
+## 2LP, 2LP, CDR 2LP
+
 - {端} 2LP, 2LP, cDR 2LP, 4HK-HK, 中飛翔: 1816
 - 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, SA1: 2123
 - {端} 2LP, 2LP, cDR 2LP, 4HK-HK, SA1: 2229
 - 2LP, 2LP, cDR 2LP, 飛燕連脚, ODムササビ, SA2: 2628
 - {端} 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, SA2, 中飛翔: 2750
 - 2LP, 2LP, cDR 2LP, 2MP, 中炎舞, SA3: 3443
-- 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, 強忍蜂, SA3
+- 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, 弱忍蜂, SA3: 3715
 
 ## 2LP(c)
 
-- 2LP(c), 2MP, 強忍蜂
+- 2LP(c), 2MP, 弱忍蜂: 1340
+- {C} 2LP(c), 2MP, 強忍蜂: 1480
 - {立} 2LP(c), 2MP, 強炎舞, 強飛翔: 2000
 
 ## 2LK
 
-- 2LK, LP, 強忍蜂: 1000 (AC1)
+- 2LK, LP, 弱忍蜂: 1000 (AC1)
 
 ## 2MP(+4)
 
-- {立} 2MP(+4), HP, 強炎舞, 強忍蜂
+- {立} 2MP(+4), HP, 強炎舞, 弱忍蜂: 2520
 - {立} 2MP(+4), HP, 強炎舞, 強飛翔: 2760
 - 2MP(+4), HP, OD忍蜂, J.MP, 強飛翔: 3000 (AC3)
 - 2MP(+4), HP, OD炎舞, 強飛翔: 3190
@@ -33,21 +37,27 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - {端} 2MP(+4), HP, OD炎舞, SA2, 中飛翔: 4710
 - 2MP(+4), HP, OD忍蜂, J.MP, 弱炎舞, SA3: 4800 (AC3)
 
+## MK(+4)
+
+- MK(+4), 2HK: 1740
+
 ## HP(+4)
 
-- {立} HP(+4), OD扇-h, HP, 強炎舞, 強忍蜂
+- {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂: 3000
 - {立} HP(+4), OD扇-h, HP, 強炎舞, 強飛翔: 3360
 - HP(+4), OD扇-h, HP, OD炎舞, 強飛翔: 3460
 - HP(+4), OD扇-h, HP, cDR 4HK, 2MP, 強炎舞, 強飛翔: 3614
 - {立端} HP(+4), OD扇-h, HP, 強炎舞, SA1: 3600
 - HP(+4), OD扇-h, HP, OD炎舞, SA1: 3940
 - HP(+4), OD扇-h, HP, cDR 4HK, 2MP, OD炎舞, SA1: 4078
+- {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, SA3: 5000
 - {立} HP(+4), OD扇-h, HP, 強炎舞, OD忍蜂, J.MP, 弱炎舞, SA3: 5380
-- HP(+4), OD扇-h, HP, cDR 4HK, 2MP, 強炎舞, 強忍蜂, SA3
+- HP(+4), OD扇-h, HP, cDR 4HK, 2MP, 強炎舞, 弱忍蜂, SA3
 
 ## 2HP(+2)
 
-- 2HP(+2), 2MP, 強忍蜂
+- 2HP(+2), 2MP, 弱忍蜂: 2040
+- {C} 2HP(+2), 2MP, 強忍蜂: 2200
 - {立} 2HP(+2), 2MP, 強炎舞, 強飛翔: 2920
 - 2HP(L+2), 2MP, OD炎舞, 強飛翔: 3200
 - 2HP(L+2), 2MP, OD炎舞, SA1: 3760
@@ -62,8 +72,9 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 パニカンで膝崩れになる。
 DR HPが無難だけど、近かったら直接HPでも届く。
 
-- HK(pc), DR HP, 強炎舞, 強忍蜂
+- HK(pc), DR HP, 強炎舞, 弱忍蜂: 2432
 - HK(pc), DR HP, 強炎舞, 強飛翔: 2600
+- HK(pc), DR HP, 強炎舞, 弱忍蜂, SA3: 4432
 
 ## 4HK(+4)
 
@@ -104,4 +115,4 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 
 - (遠) OD扇, DR 2LP, (扇), HP, 強炎舞, 強飛翔: 2128
 
-モダンはOD炎舞, 強忍蜂よりもOD忍蜂, J.MP, ムササビの方が高くなりやすい。
+モダンはOD炎舞, 弱忍蜂よりもOD忍蜂, J.MP, ムササビの方が高くなりやすい。
