--- a/games/Street-Fighter/Six/characters/Mai/舞の立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の立ち回り.md
@@ -1,8 +1,11 @@
 ## 差し合い
 
+基本的にはHKを差し返せる距離を保つ。
+離れすぎると動きづらい。
+
 前に出ることもできるけど、基本的にはHPやHKを振りながら下がりたい。
 
-運び性能も高いので下がれる。
+忍蜂で運び性能も高いので下がれる。
 
 弾の撃ち合いは扇が弾に潰されるので不利。
 遠距離ではOD扇を使うか、扇を見てから撃ち返せないくらいの距離を保つ。
@@ -34,14 +37,22 @@ OD扇で相手の波動拳を相殺するのが強い。
 
 OD扇がとにかく強いので積極的に使いたい。発生12Fで、HKの外くらいで当てるとコンボにもいける。インパクトには注意。
 
+お互いにコパコパの2回目が届かないくらいの距離だと、2MPが強い。発生6Fで2LPが繋がる。ただ、離れると繋がらないので距離の判別が難しい。コパコパが届くならコパコパでいいし。
+
 ## 対空
 
-基本的に昇竜。
-通常技なら4HKの判定が強い。
+基本的に昇竜。SA1も使うことがある。
+通常技なら4HKの判定が強いけど、潰されやすい。
 
-対空は安定してるけど横に短いし、カス当たりすると安い。ちゃんと当たっても安い方。
+モダンなら対空は安定してるけど横に短いし、カス当たりすると安い。ちゃんと当たっても安い方。
 
 ## 攻め
+
+舞を知らない人ならHPから扇で固めてさらにHPを当てるループが強力。
+
+忍蜂、飛翔、SA2、SA3あたりからループするのが強力。
+弱炎舞は一応当たってたら2MPから
+中央の投げ、SA1
 
 ## 守り
 
