--- a/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
@@ -54,8 +54,10 @@
 
 ## 差し合いの中のPCコンボ
 
-- 4HK(pc), DR HP, 強炎舞, 強忍蜂, SA3
-- 4HK(pc), DR HP, 強炎舞, 強忍蜂, DR 6MP, SA3
+（簡単練習設定: 差し返しの練習）
+
+- 4HK(pc), DR HP, 強炎舞, 強忍蜂, SA3, DR
+- 4HK(pc), DR HP, 強炎舞, 強忍蜂, ステップ, 2LP/前投げ
 
 ## ムササビからの起き攻め
 
