--- a/games/Street-Fighter/Six/characters/Mai/舞の対策.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の対策.md
@@ -1,19 +1,30 @@
-2LK, LPのあとは-2で、キャンセル強扇でも5F技まで相打ち。
-忍蜂なら潰されるけど、当たって800くらい、ガードで強攻撃が入る。SA3がある時だけ注意。
+## 差し合い
 
-LK-LK-LKで後ろに跳んだあとは遠いけど-10なので、キャラによっては確反がある。ただ、ムササビの舞との読み合いになるので何もしなくてもいい。
-リュウはSA1が確定だけど、暗点を見てからムササビの舞でキャンセルするとリュウが負ける。
+対空を昇竜に依存している。4HKでも落とせなくはないけど弱い。特にクラシックなら不意に飛ぶと落としづらい。
+モダンの場合もダメージが低いので結構飛んでも大丈夫。
+
+## 確反
 
 確反:
 
 - 昇竜: 29F
 - 炎舞: 6F
 - OD炎舞: 12F
-- 忍蜂: 10F
-- OD忍蜂: 12F
+- 忍蜂: 10-13F
 - SA1: 31F
 - SA2: 24F
 - SA3: 33F
+- 飛燕連脚: 10F (大足の外)
+
+LK-LK-LKで後ろに跳んだあとは遠いけど-10なので、キャラによっては確反がある。ただ、ムササビの舞との読み合いになるので何もしなくてもいい。
+リュウはSA1が確定だけど、暗点を見てからムササビの舞でキャンセルするとリュウが負ける。
+LK-LK-LKで後ろに跳んだあとは遠いけど-10なので、キャラによっては確反がある。ただ、ムササビの舞との読み合いになるので何もしなくてもいい。
+リュウはSA1が確定だけど、暗点を見てからムササビの舞でキャンセルするとリュウが負ける。
+
+## その他
+
+2LK, LPのあとは-2で、キャンセル強扇でも5F技まで相打ち。
+忍蜂なら潰されるけど、当たって800くらい、ガードで強攻撃が入る。SA3がある時だけ注意。
 
 中央の4HK-HKで吹き飛ばされたあとは受け身を取らない方がいい。中扇, DR 6MPが重なる。
 
