--- a/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
@@ -16,6 +16,8 @@
 
 一応、HK(pc), HKが42だけど、ダメージが大幅に下がる。
 
+## 2HK: 33
+
 ## 2HK(pc): 48
 
 - 前跳び: +5
@@ -44,18 +46,29 @@
 - 後投げ, 強扇, (OD飛翔): その場受け身からジャンプに引っかかる、後ろ受け身からジャンプを落とせる
 - 後投げ, DR HP: 打撃重ね
 
-## 強忍蜂: 27
+## 弱忍蜂: 27
 
-中央で強忍蜂締めはステップして歩き投げがギリギリ後退に届かない。
+中央で忍蜂締めはステップして歩き投げがギリギリ後退に届かない。
 守る側は舞がラッシュしなければ後退としゃがみガードの二択で守れて無敵技もあるので、攻められているとはいえ守る側が有利な読み合い。
 
-## OD炎舞, 強忍蜂: 37
+## OD炎舞, 弱忍蜂: 37
 
 中央でもステップ2回で密着1F。
+
+端では2MPでフレーム消費して4HK(+4)が重なる。
+
+- ステップ, ステップ: +1
+- {端} 2MP, 4HK(+4): フレーム消費して4HK(+4)
+
+## 弱炎舞: 3
+
+ダウンせずに+3で、投げ間合いの外。
+基本的には2MPで固めて、ヒット確認から2LPだけど、2LPが届かない場合もある。
 
 ## 中炎舞: 35
 
 - ステップ, 前歩き; 前投げ: 目押しで投げ重ね
+- {端} 2LK, 2LP, 4HK(+4): フレーム消費して4HK(+4)
 
 ## 弱飛翔: 29
 
@@ -73,6 +86,8 @@
 - DR 6MP
 - DR 2LK: 目押しで下段
 - DR 投げ: 目押しで投げ
+
+## SA3: 19
 
 ## その他
 
