--- a/shared/game/genres/fighting/格闘ゲーム.md
+++ b/shared/game/genres/fighting/格闘ゲーム.md
@@ -31,3 +31,5 @@ https://x.com/fuesou/status/1806068277841715655
 自分の体力をケチって相手の体力を減らせないのではダメ。リソース管理の面がある。
 
 格ゲーが上達するかどうかは、対戦と同じくらいトレモを楽しめるかどうかだ。トレモしないとコンボが上手くならないし、判断が早くならない。
+
+格闘ゲームはFPSよりも同じ状況がまたあるということが多いので、リプレイを確認したり座学したりするのが身になりやすい。
