--- a/games/Street-Fighter/ヒット確認のコツ.md
+++ b/games/Street-Fighter/ヒット確認のコツ.md
@@ -1,6 +1,9 @@
 差し合いやシミーのように相手にも動く余裕がある時のヒット確認は、当たった時ではなく相手が動いた時点でヒットすると考える。
 攻撃が当たる前に見ることができればヒット確認の余裕も10F弱は増える。
 
+起き攻めではヒットのエフェクトを見て判別するしかない。
+ただ、起き攻めではヒット確認しやすい技を振ればいい。特にラッシュ攻撃。
+
 まずはコンボやセットプレイを決め打ちで練習して、それからヒット確認できるようにする。
 
 ヒットとガードがある場合、まずはヒットの時にコンボ、ガードの時は何もしない練習をする。
