--- a/games/Street-Fighter/Six/characters/Mai/舞の確反.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の確反.md
@@ -1,14 +1,30 @@
+## 概要
+
+まずはDリバにも入る2MP(+4)始動が基本。
+それより猶予が短かったら小パンから。
+
 ## 4F
 
-- 2LP, 2LP, 強忍蜂
-- 2LP(+4), 強炎舞
-- 2LP(+4), cDR 4HK
+- 2LP, 2LP, 弱忍蜂/強飛翔
+- 2LP(+2), 2MP, OD炎舞/{立}強炎舞/CR 4HK, ..
+
+パニカン確認が難しかったら普通にコパコパからでもいいけど、できれば中パンを挟んで伸ばす。
 
 ## 6F
 
-- 2MP(+4), HP, ...
+- {立} 2MP(+4), HP, 強炎舞, ...
+
+昇竜やSA、Dリバは基本的に立っているので強炎舞に繋ぎたい。
 
 ## 7F
 
-- 4HK(+4), 2MP, 強炎舞, ...
+- {立} 4HK(+4), 2MP, 強炎舞, ...: 2MP始動よりも40くらい高い
+
+強制立たせだが、無理に覚えなくてもいい。
+
+## 9F
+
+- HP(+4), OD扇h, HP, 強炎舞, ...: 2MP始動よりも400くらい高い
 - HP(+4), OD扇h, HP, cDR 4HK, 2MP, ...
+
+ゲージ2本使って1本返ってくるので、狙えるところでは積極的に狙いたい。
