--- a/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
@@ -35,9 +35,15 @@
 
 ## 確反
 
-（確定反撃の練習）
+（簡単練習設定: 確定反撃の練習）
 
-- 4HK(pc), 2MP, 強炎舞, 強忍蜂, SA3
+- 2MP(pc), HP, 強炎舞, 弱忍蜂, SA3
+
+## インパクト返しからのコンボ
+
+- DI(pc), HP, 強炎舞, 弱忍蜂, SA3
+
+## インパクト
 
 ## ラッシュからの攻め
 
@@ -66,6 +72,11 @@
 - (端) LK-LK-LK, ムササビ, ステップ x2, 前J.HK, 2MP, OD炎舞, ...
 
 DR {HP/6MP}から繋いだ場合は前投げが早すぎるので1-4F遅らせる。
+
+## ゲージを使った確反
+
+- HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, ステップ, ...
+- HP(+4), OD扇-h, HP, 強炎舞, 強飛翔, 弱扇-h
 
 ## ラッシュを使った起き攻め
 
