--- a/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
@@ -1,6 +1,11 @@
 # 舞の起き攻め
 
-ガードさせて有利になる通常技がないので、中以上の打撃を重ねるならラッシュか持続重ねにする。
+2MPを重ねるのが基本。
+ヒットしたら2LPが入るし、ガードされても投げの外で-3になるだけ。
+
+余裕があったら
+
+ガードさせて有利になる通常技がないので、ガードされたら中以上の打撃を重ねるならラッシュか持続重ねにする。
 ラッシュすると投げとシミーの二択は狙いにくくなるので、中下段と投げで崩す。
 
 中以上で普通に重ねてヒット確認できるのは4HKくらい。
@@ -51,14 +56,9 @@
 中央で忍蜂締めはステップして歩き投げがギリギリ後退に届かない。
 守る側は舞がラッシュしなければ後退としゃがみガードの二択で守れて無敵技もあるので、攻められているとはいえ守る側が有利な読み合い。
 
-## OD炎舞, 弱忍蜂: 37
+## {C} 中忍蜂: 23
 
-中央でもステップ2回で密着1F。
-
-端では2MPでフレーム消費して4HK(+4)が重なる。
-
-- ステップ, ステップ: +1
-- {端} 2MP, 4HK(+4): フレーム消費して4HK(+4)
+## {C} 強忍蜂: 22
 
 ## 弱炎舞: 3
 
@@ -70,16 +70,48 @@
 - ステップ, 前歩き; 前投げ: 目押しで投げ重ね
 - {端} 2LK, 2LP, 4HK(+4): フレーム消費して4HK(+4)
 
-## 弱飛翔: 29
+## 強炎舞, 弱忍蜂: 30
+
+中央でもステップ1回で投げ間合い。後方受け身から後退にも投げが届く。
+
+## 強炎舞, 強飛翔: 30
+
+忍蜂〆よりも離れるが、中央でもラッシュすれば投げ間合いに入る。
+
+- DR 4HK/6MP/2MPなど
+- DR 投げ: 長めに走るか前歩きで届く
+- DR 後退: シミー
+
+## OD炎舞, 強飛翔: 32
+
+## OD炎舞, 弱忍蜂: 37
+
+中央でもステップ2回で密着1F。
+
+端では2MPでフレーム消費して4HK(+4)が重なる。
+
+- ステップ, ステップ: +1
+- {端} 2MP, 4HK(+4): フレーム消費して4HK(+4)
+
+## 弱飛翔: 29-32
 
 - DR 6MP, 2MP
 - DR 2LK, 2LP, 2LP
 - DR 2LK, 2MP: 目押しで下段重ね
-- (端) ステップ, 4HK, 2MP: ガードで+3、ヒットで+7から2MPが繋がる
-- (端) ステップ, 4HK, 2MP(c), 2MP: カウンターヒットを確認してコンボ
-- (端) ステップ, 4HK, 前歩き; 前投げ: 打撃で固めて投げで崩す
 - (端) ステップ; 前投げ: 目押しで投げ重ね
 - (端) ステップ, 後歩き: シミー
+
+29Fの時:
+
+- (端) ステップ, 4HK(+4), 2MP: ガードで+3、ヒットで+7から2MPが繋がる
+- (端) ステップ, 4HK(+4), 2MP(c), 2MP: カウンターヒットを確認してコンボ
+- (端) ステップ, 4HK(+4), 前歩き; 前投げ: 打撃で固めて投げで崩す
+
+カス当たりで1ヒットになると33Fくらい。
+
+## 強炎舞, 強飛翔: 30
+
+- {中央} 弱扇-h: 前ジャンプされても対空が間に合う
 
 ## 強飛翔: 31-32
 
