--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -17,15 +17,23 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - 2LP, 2LP, cDR 2LP, 2MP, 中炎舞, SA3: 3443
 - 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, 弱忍蜂, SA3: 3715
 
-## 2LP(c)
+## 2LP(+2)
 
-- 2LP(c), 2MP, 弱忍蜂: 1340
-- {C} 2LP(c), 2MP, 強忍蜂: 1480
-- {立} 2LP(c), 2MP, 強炎舞, 強飛翔: 2000
+- 2LP(+2), 2MP, 弱忍蜂: 1340
+- {C} 2LP(+2), 2MP, 強忍蜂: 1480
+- {立} 2LP(+2), 2MP, 強炎舞, 強飛翔: 2000
+- 2LP(+2), 2MP, OD炎舞, 強飛翔: 2200
+- 2LP(+2), 2MP, OD炎舞, SA1: 2680
+- 2LP(+2), 2MP, CR 4HK, 2MP, 強炎舞, 強飛翔: 2194
 
 ## 2LK
 
 - 2LK, LP, 弱忍蜂: 1000 (AC1)
+
+## 2MP(+1)
+
+- 2MP(+1), 2MP, 中炎舞/強忍蜂: 2000
+- 2MP(+1), 2MP, 中炎舞/強忍蜂, SA3: 4400
 
 ## 2MP(+4)
 
@@ -33,9 +41,14 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - {立} 2MP(+4), HP, 強炎舞, 強飛翔: 2760
 - 2MP(+4), HP, OD忍蜂, J.MP, 強飛翔: 3000 (AC3)
 - 2MP(+4), HP, OD炎舞, 強飛翔: 3190
+- 2MP(+4), HP, CR HK, 2MP, CR 4HK, 2MP, 強炎舞, 強飛翔: 3502
+- {端} 2MP(+4), 4HK-HK, SA1: 3480
 - 2MP(+4), HP, OD炎舞, SA1: 3600
+- {立} 2MP(+4), HP, 強炎舞, SA2: 3720
+- 2MP(+4), HP, OD炎舞, SA2: 4160
 - {端} 2MP(+4), HP, OD炎舞, SA2, 中飛翔: 4710
 - 2MP(+4), HP, OD忍蜂, J.MP, 弱炎舞, SA3: 4800 (AC3)
+- 2MP(+4), HP, CR HK, 2MP, CR 4HK, 2MP, 強炎舞, 弱忍蜂, SA3: 5402
 
 ## MK(+4)
 
@@ -50,6 +63,8 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - {立端} HP(+4), OD扇-h, HP, 強炎舞, SA1: 3600
 - HP(+4), OD扇-h, HP, OD炎舞, SA1: 3940
 - HP(+4), OD扇-h, HP, cDR 4HK, 2MP, OD炎舞, SA1: 4078
+- {立} HP(+4), OD扇-h, HP, 強炎舞, SA2: 4000
+- {端} HP(+4), OD扇-h, HP, OD炎舞, SA2, 中飛翔: 4860
 - {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, SA3: 5000
 - {立} HP(+4), OD扇-h, HP, 強炎舞, OD忍蜂, J.MP, 弱炎舞, SA3: 5380
 - HP(+4), OD扇-h, HP, cDR 4HK, 2MP, 強炎舞, 弱忍蜂, SA3
@@ -95,6 +110,24 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 - 飛燕連脚, ムササビ: 1570
 - 飛燕連脚, ODムササビ, 強飛翔: 2290
 - 飛燕連脚, ODムササビ, SA2: 3090
+
+## DI(pc)
+
+- DI(pc), HP, 強炎舞, 弱忍蜂
+- DI(pc), HP, 強炎舞, 強飛翔: 2760
+- DI(pc), HP, 強炎舞, 弱忍蜂, SA3
+
+## DI(壁)
+
+- DI(壁), 4HK-HK, 中飛翔: 2720
+- DI(壁), 4HK-HK, SA1: 3080
+- DI(壁), 4HK-HK, SA1(焔): 3200
+
+## DI(g)(壁)
+
+- DI(g)(壁), 4HK-HK, 中飛翔: 2128
+- DI(g)(壁), 4HK-HK, SA1: 2560
+- DI(g)(壁), 4HK-HK, SA1(焔): 2704
 
 ## その他
 
