--- a/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
@@ -28,6 +28,11 @@
 ヒット確認してムササビが繋がる。
 ガードされると-10だが、端以外ではほとんどの大足の外。長めのSAなどは注意が必要。
 
+## 2LK, 2LP: 2-5
+
+下段から崩す。
+舞は投げ間合いギリギリになる起き攻めも多く、下段が当たる後退と投げの択になる。
+
 ## 2MP: 3-5
 
 ヒット確認で+5から2LPが繋がる。
@@ -57,6 +62,11 @@
 
 起き上がりに持続当てで2MPが繋がる。
 
+## DR 2LP: 13-16
+
+ヒット確認で+8からコンボ。
+ガードされても+3で投げ間合い。密着すれば2LK, 2LPも届く。
+
 ## DR 2LK: 14-17
 
 ヒット確認で+6から2LPや2MPが繋がる。
@@ -65,7 +75,18 @@
 ## DR 4HK: 16-22
 
 ヒット確認で+7から2MPが繋がり、強制立たせ効果がある。
-ガードされても+3で投げ間合いからさらに攻め継続できる。
+ガードされても+3で投げ間合いからさらに攻め継続できる。ただ、後ろ下がりで投げが届かないので、下段との読み合い。
+
+- DR 4HK, 2MP, 強炎舞, ...
+- DR 4HK(g), 2LK, LP, ...
+- DR 4HK(g), 前投げ
+
+## 弱炎舞(+4): 17-19
+
+17Fの時にヒットで+7、ガードで五分になる。
+ガードされると投げ間合いなので、2LPで暴れるか、様子見か。
+どっちにしても2LP, 2LPと刻むのが無難だけど、2MPにもいける。
+19Fの時はHPにもいけるけど、2MPで十分。
 
 ## DR 6MP: 27-32
 
