--- a/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
@@ -41,10 +41,12 @@
 
 - {端} ステップ: 後歩きがシミーになる投げ間合い
 
-- 弱扇, (強飛翔): その場受け身からジャンプを落とせる、後ろ受け身から前ジャンプに引っかかる
-- DR HK: 打撃重ね、4F技と相打ちでSA2が入る
-- (端) ステップ, 前投げ: 柔道
-- (端) DR 4HK: +6
+- {中央} 弱扇: 昇竜対空も間に合う
+- {中央} DR HK: 打撃重ね、4F技と相打ちでSA2が入る
+- {端} ステップ, 前投げ: 柔道
+- {端} ステップ, 前投げ: 柔道
+- {端} ステップ, 後歩き: シミー
+- {端} DR 4HK: +6
 
 ## 後投げ: 17
 
@@ -118,6 +120,13 @@
 - DR 6MP
 - DR 2LK: 目押しで下段
 - DR 投げ: 目押しで投げ
+
+## 飛燕連脚, ムササビ: 41
+
+- ステップ, ステップ: +5
+  - 2LP(+2): ヒットで+6、ガードで+1
+  - 前投げ
+- J.HK: 6F詐欺
 
 ## SA3: 19
 
