--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -6,6 +6,8 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 
 - 2LP, 2LP, 弱忍蜂: 1100
 - 2LP, 2LP, 強飛翔: 1380
+- 2LP, 2LP, SA2: 2500
+- 2LP, 2LP, 弱忍蜂, SA3: 3100
 
 ## 2LP, 2LP, CDR 2LP
 
@@ -29,11 +31,25 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 ## 2LK
 
 - 2LK, LP, 弱忍蜂: 1000 (AC1)
+- 2LK, LP, 弱忍蜂, SA3: 3000 (AC1)
+
+## 2MP
+
+- 2MP, 2LP, 弱忍蜂: 1540
+- 2MP, 2LP, SA2: 3140
+- 2MP, 2LP, 弱忍蜂, SA3: 3940
 
 ## 2MP(+1)
 
 - 2MP(+1), 2MP, 中炎舞/強忍蜂: 2000
+- 2MP(+1), 2MP, OD炎舞, 弱忍蜂: 2560
+- 2MP(+1), 2MP, OD炎舞, 強飛翔: 2840
+- 2MP(+1), 2MP, OD炎舞, SA1: 3400
+- 2MP(+1), 2MP, OD炎舞, SA2: 3960
+- {端} 2MP(+1), 2MP, OD炎舞, SA2, 中飛翔: 4510
 - 2MP(+1), 2MP, 中炎舞/強忍蜂, SA3: 4400
+- 2MP(+1), 2MP, OD炎舞, 弱忍蜂, SA3: 4560
+- 2MP(+1), 2MP, CR 4HK, 2MP, 強炎舞, 弱忍蜂, SA3: 4778
 
 ## 2MP(+4)
 
