--- a/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
@@ -4,13 +4,13 @@
 （ダミー設定 > 起き上がり: 後方受け身）
 （反撃設定 > ダウンリバーサル: 4F技）
 
-- 2LP, 2LP, 強忍蜂, SA3, DR 4HK, ...
-- 2LP, 2LP, 強忍蜂, ステップ, 前歩き, 2LP, 2LP, ...
-- 2LP, 2LP, 強忍蜂, ステップ, 前歩き, 前投げ, 弱扇-h
+- 2LP, 2LP, 弱忍蜂, SA3, DR 4HK, ...
+- 2LP, 2LP, 弱忍蜂, ステップ, 前歩き, 2LP, 2LP, ...
+- 2LP, 2LP, 弱忍蜂, ステップ, 前歩き, 前投げ, 弱扇-h
 - 2LP(g), 2LP, ガード
 
-モダンならAC1でも可。
-ただ、暴れでも使うので2LPからもコンボにできた方がいい。
+モダンならAC1でも可。ヒット確認が要らないので簡単。
+ただ、暴れでも使うので、2LPからもコンボにできた方がいい。
 
 慣れたらダウンリバーサルに「何もしない」も加えてランダムガードさせる。
 
@@ -51,7 +51,8 @@
 （ガードリバーサル: 4F技）
 
 - DR 4HK, 2MP, 強炎舞, 強忍蜂, ...
-- DR 4HK(g), 2LP, 2LP, ...
+- DR 4HK(g), 2MP, 2LP, 強忍蜂, ...
+- DR 4HK(g), 2MP(g), ガード
 - DR 4HK(g), 前投げ
 
 （反撃設定 > ガードリバーサル: 通常投げ）
