--- a/shared/music/vocal/training/tips/歌詞カードを作る.md
+++ b/shared/music/vocal/training/tips/歌詞カードを作る.md
@@ -24,3 +24,5 @@
 まずはリズムが重要。
 
 英語の歌詞はまずアクセントがどこにあるか把握して、英語にマーキングするところから始めるといい。読み仮名をつけたりするのはその後。まずリズムがわからないと歌いづらいし、読み仮名をつけるにも聞き取りづらい。
+
+ネット上の歌詞はコピペできないことが多いけど、Safariのようなリーダーに読み込ませたり、CSSをいじって`user-select: none`を外したりするとコピペできる。
