--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -129,19 +129,21 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 
 ## DI(pc)
 
-- DI(pc), HP, 強炎舞, 弱忍蜂
+- DI(pc), HP, 強炎舞, 弱忍蜂: 2560
 - DI(pc), HP, 強炎舞, 強飛翔: 2760
-- DI(pc), HP, 強炎舞, 弱忍蜂, SA3
+- DI(pc), HP, 強炎舞, 弱忍蜂, SA3: 4560
 
 ## DI(壁)
 
 - DI(壁), 4HK-HK, 中飛翔: 2720
+- DI(壁), 4HK-HK, OD飛翔: 2920
 - DI(壁), 4HK-HK, SA1: 3080
 - DI(壁), 4HK-HK, SA1(焔): 3200
 
 ## DI(g)(壁)
 
 - DI(g)(壁), 4HK-HK, 中飛翔: 2128
+- DI(g)(壁), 4HK-HK, 中飛翔: 2368
 - DI(g)(壁), 4HK-HK, SA1: 2560
 - DI(g)(壁), 4HK-HK, SA1(焔): 2704
 
@@ -165,3 +167,5 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 - (遠) OD扇, DR 2LP, (扇), HP, 強炎舞, 強飛翔: 2128
 
 モダンはOD炎舞, 弱忍蜂よりもOD忍蜂, J.MP, ムササビの方が高くなりやすい。
+
+LP, 弱炎舞が繋がるけどダメージも弱忍蜂と変わらないので使わない。
