--- a/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
@@ -58,9 +58,16 @@
 - HP, 強扇-h, ステップ, 2LP, (扇), HP: 当たるまで11-13Fくらい、ガードされてもさらに攻め継続
 - HP, 強扇-h, ステップ, ガード: シミー
 
+## 4HK(+1): 8-9
+
+ヒットすると2LPが繋がる。
+ガードされても五分以上。
+カウンターヒットすると2MP, 強炎舞が入るのでできればカウンター確認したい。
+
 ## 4HK(+3): 10-11
 
-起き上がりに持続当てで2MPが繋がる。
+ヒットすると2MP, 強炎舞が入る。
+ガードされても+2以上。
 
 ## DR 2LP: 13-16
 
