--- a/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
@@ -3,16 +3,15 @@
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
 （反撃設定 > ダウンリバーサル: 4F技）
+（反撃設定 > ダウンリバーサル: 何もしない）
 
 - 2LP, 2LP, 弱忍蜂, SA3, DR 4HK, ...
-- 2LP, 2LP, 弱忍蜂, ステップ, 前歩き, 2LP, 2LP, ...
-- 2LP, 2LP, 弱忍蜂, ステップ, 前歩き, 前投げ, 弱扇-h
+- 2LP, 2LP, 弱忍蜂, ステップ, 前歩き, 2LK, LP/2LP, 弱忍蜂, ...
+- 2LP, 2LP, 弱忍蜂, ステップ, 前歩き, 前投げ, 弱扇-h, 前歩き
 - 2LP(g), 2LP, ガード
 
 モダンならAC1でも可。ヒット確認が要らないので簡単。
 ただ、暴れでも使うので、2LPからもコンボにできた方がいい。
-
-慣れたらダウンリバーサルに「何もしない」も加えてランダムガードさせる。
 
 ## 柔道
 
@@ -43,7 +42,11 @@
 
 - DI(pc), HP, 強炎舞, 弱忍蜂, SA3
 
-## インパクト
+## 壁インパクトからのコンボ
+
+- DI(壁), 4HK-HK, 中飛翔/SA1
+
+MならSPボタンで出せる弱飛翔でもいい。
 
 ## ラッシュからの攻め
 
