--- a/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
@@ -55,8 +55,12 @@
 
 ## 弱忍蜂: 27
 
-中央で忍蜂締めはステップして歩き投げがギリギリ後退に届かない。
+中央で忍蜂締めはステップして歩き投げがギリギリ後退に届かない。後退に勝てる2LKからの攻めが基本。
 守る側は舞がラッシュしなければ後退としゃがみガードの二択で守れて無敵技もあるので、攻められているとはいえ守る側が有利な読み合い。
+
+- ステップ, 前歩き, 2LK, 2LP
+- ステップ, 前歩き, 前投げ: 後退に届かない
+- {端} ステップ, 4HK(+2)
 
 ## {C} 中忍蜂: 23
 
